SA1.41-59, 138: Made changes to footnote formatting, added missing links to Yinshun edition

--- a/01_agama/samyukta/01/SA1_45.md
+++ b/01_agama/samyukta/01/SA1_45.md
@@ -14,103 +14,103 @@ next: SA1_46.html
   <th class='ch'>（二六二） 闡陀</th>
   <th class='en'>45 (262). Chandaka</th>
   <tr>
-    <td class="ch" title='t125.2.66b6'>如是我聞：一時，有眾多上座比丘住[5]波羅㮈國仙人住處鹿野苑中，佛般泥洹未久。</td>
+    <td class='ch' title='t99.2.66b6'>如是我聞： 一時，有眾多上座比丘住波羅㮈國、仙人住處、鹿野苑中。 佛般泥洹未久。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, there was a group of senior monks who were staying at the Residence of Sages in the Deer Preserve of Bārāṇasī.<sup id="ref2"><a href="#n2">2</a></sup> It was not long after the Buddha’s <em>parinirvāṇa</em>.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66b8'>時，長老闡陀晨朝著衣持鉢，入波羅㮈城乞食。食已，還攝衣鉢，洗足已，持戶鈎，從林至林，從房至房，從經行處至經行處，處處請諸比丘言：「當教授我，為我說法，令我知法、見法，我當如法知、如法觀。」</td>
+    <td class='ch' title='t99.2.66b8'>時，長老闡陀晨朝著衣持鉢，入波羅㮈城乞食。 食已，還攝衣鉢。 洗足已，持戶鈎，從林至林，從房至房，從經行處至經行處。 處處請諸比丘言： 「當教授我，為我說法，令我知法、見法。 我當如法知、如法觀。」</td>
     <td id='p2'>2. At the time, the elderly Chandaka put on his robe and took his bowl to Bārāṇasī to solicit alms early in the morning. After eating, he returned and put away his robe and bowl. After he washed his feet, he took the door key<sup id="ref3"><a href="#n3">3</a></sup> and went from grove to grove and from hut to hut, walking at length from place to place. Everywhere, he requested of the monks, “You should instruct me and teach the Dharma to me so that I will know and see the Dharma. I will know and see according to that Dharma.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66b12'>時，諸比丘語闡陀言：「色無常，受、想、行、識無常，一切行無常，一切法無我，涅槃寂滅。」</td>
-    <td id='p3'>3. The monks then told Chandaka, “Form is impermanent. Feeling … conception … volition … awareness is imperament. All actions are impermanent. All things are selfless. <em>Nirvāṇa</em> is peaceful cessation.”</td>
+    <td class='ch' title='t99.2.66b12'>時，諸比丘語闡陀言： 「色無常。 受⋯想⋯行⋯識無常。 一切行無常。 一切法無我。 涅槃寂滅。」</td>
+    <td id='p3'>3. The monks then told Chandaka, “Form is impermanent. Feeling … conception … volition … awareness is impermanent. All actions are impermanent. All things are selfless. <em>Nirvāṇa</em> is peaceful cessation.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66b14'>闡陀語諸比丘言：「我已知色無常，受、想、行、識無常，一切行無常，一切法無我，涅槃寂滅。」</td>
-    <td id='p4'>4. Candaka said to the monks, “I already know that form is impermanent, that feeling … conception … volition … awareness is imperament, that all actions are impermanent, that all things are selfless, and that <em>nirvāṇa</em> is peaceful cessation.”</td>
+    <td class='ch' title='t99.2.66b14'>闡陀語諸比丘言： 「我已知色無常，受、想、行、識無常，一切行無常，一切法無我，涅槃寂滅。」</td>
+    <td id='p4'>4. Candaka said to the monks, “I already know that form is impermanent, that feeling … conception … volition … awareness is impermanent, that all actions are impermanent, that all things are selfless, and that <em>nirvāṇa</em> is peaceful cessation.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66b16'>闡陀復言：「然我不喜聞：『一切諸行空寂、不可得、愛盡、離欲、涅槃。』此中云何有我而言：『如是知、如是見，是名見法。』？」第二、第三亦如是說。</td>
-    <td id='p5'>5. Chandaka also said, “Still, I don’t delight in hearing, ‘All actions are empty, at peace, and unobtainable. End craving, become free of desire, and <em>nirvāṇa</em>.’ Isn’t there a self who says, ‘Knowing and seeing in this way is called seeing the Dharma.’ For a second and third time, he spoke in this way.”</td>
+    <td class='ch' title='t99.2.66b16'>闡陀復言： 「然我不喜聞： 『一切諸行空、寂、不可得。 愛盡、離欲、涅槃。』 此中云何有我而言： 『如是知、如是見，是名見法。』？」 第二、第三亦如是說。</td>
+    <td id='p5'>5. Chandaka also said, “Still, I don’t delight in hearing, ‘All actions are empty, at peace, and unobtainable. End craving, become free of desire, and <em>nirvāṇa</em>.’ Isn’t there a self who says, ‘Knowing and seeing in this way is called seeing the Dharma.’” For a second and third time, he spoke in this way.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66b20'>闡陀復言：「是中誰復有力堪能為我說法，令我知法、見法？」復作是念：「尊者阿難今在拘睒彌國瞿師羅園，曾供養親覲世尊，佛所讚歎，諸梵行者皆悉識知。彼必堪能為我說法，令我知法、見法。」</td>
+    <td class='ch' title='t99.2.66b20'>闡陀復言： 「是中誰復有力堪能為我說法，令我知法、見法？」 復作是念： 「尊者阿難今在拘睒彌國、瞿師羅園。 曾供養親覲世尊。 佛所讚歎，諸梵行者皆悉識知。 彼必堪能為我說法，令我知法、見法。」</td>
     <td id='p6'>6. Chandaka again said, “Who has the ability and capacity to teach me the Dharma, to make me know and see the Dharma?” Then, he thought, “Venerable Ānanda is staying at Ghoṣila Park of Kauśāmbī. He had supported the Bhagavān and was close to him. He was praised by the Buddha, and those of the religious practice all know him. Surely, he can teach me the Dharma and make me know and see the Dharma.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66b24'>時，闡陀過此夜已，晨朝著衣持鉢，入波羅㮈城乞食。食已，還攝舉臥具，攝臥具已，持衣鉢詣拘睒彌國，漸漸遊行到拘睒彌國，攝舉衣鉢，洗足已，詣尊者阿難所，共相問訊已，却坐一面。</td>
+    <td class='ch' title='t99.2.66b24'>時，闡陀過此夜已，晨朝著衣持鉢，入波羅㮈城乞食。 食已，還攝舉臥具。 攝臥具已，持衣鉢詣拘睒彌國，漸漸遊行到拘睒彌國。 攝舉衣鉢。 洗足已，詣尊者阿難所。 共相問訊已，却坐一面。</td>
     <td id='p7'>7. After the night had passed, Chandaka put on his robe and took his bowl to Bārāṇasī to solicit alms early in the morning. After eating, he returned and made his bed. After making his bed, he took his robe and bowl and traveled to Kauśāmbī, eventually making his way there on foot. He then put away his robe and bowl. After washing his feet, he went to Venerable Ānanda. After they had exchanged greetings, he withdrew to sit at one side.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66b29'>時，闡陀語尊者阿難言：「一時，諸上座比丘住波羅㮈國仙人住處鹿野苑中。時，我晨朝著衣持鉢入波羅㮈城乞食。食已，還攝衣鉢，洗足已，持戶鉤，從林至林，從房至房，從經行處至經行處，處處見諸比丘，而請之言：『當教授我，為我說法，令我知法、見法。』</td>
-    <td id='p8'>8. Chandaka said to Venerable Ānanda, “One time, the senior monks were staying at the Residence of Sages in the Deer Preserve of Bārāṇasī. I then put on my robe and took my bowl to Bārāṇasī to solicit alms early in the morning. After eating, I returned and put away my robe and bowl. After I washed my feet, I took the door key and went from grove to grove and from hut to hut, walking at length from place to place. Everywhere, I requested of the monks, ‘You should instruct me and teach the Dharma to me so that I will know and see the Dharma. I will know and see according to that Dharma.’</td>
+    <td class='ch' title='t99.2.66b29'>時，闡陀語尊者阿難言： 「一時，諸上座比丘住波羅㮈國仙人住處鹿野苑中。 時，我晨朝著衣持鉢入波羅㮈城乞食。 食已，還攝衣鉢， 洗足已，持戶鉤，從林至林，從房至房，從經行處至經行處， 處處見諸比丘，而請之言： 『當教授我，為我說法，令我知法、見法。』</td>
+    <td id='p8'>8. Chandaka said to Venerable Ānanda, “One time, the senior monks were staying at the Residence of Sages in the Deer Preserve of Bārāṇasī. I then put on my robe and took my bowl to Bārāṇasī to solicit alms early in the morning. After eating, I returned and put away my robe and bowl. After I washed my feet, I took the door key and went from grove to grove and from hut to hut, walking at length from place to place. Everywhere, I requested of the monks, ‘You should instruct me, teach me the Dharma, and make me know and see the Dharma.’</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66b29'>「時，諸比丘為我說法言：『色無常，受、想、行、識無常，一切行無常，一切法無我，涅槃寂滅。』</td>
-    <td id='p9'>9. “The monks then taught me the Dharma, ‘Form is impermanent. Feeling … conception … volition … awareness is imperament. All actions are impermanent. All things are selfless. <em>Nirvāṇa</em> is peaceful cessation.’</td>
+    <td class='ch' title='t99.2.66c6'>「時，諸比丘為我說法言： 『色無常。 受⋯想⋯行⋯識無常。 一切行無常。 一切法無我。 涅槃寂滅。』</td>
+    <td id='p9'>9. “The monks then taught me the Dharma, ‘Form is impermanent. Feeling … conception … volition … awareness is impermanent. All actions are impermanent. All things are selfless. <em>Nirvāṇa</em> is peaceful cessation.’</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66b29'>我爾時語諸比丘言：『我已知色無常，受、想、行、識無常，一切行無常，一切法無我，涅槃寂滅。然我不喜聞：「一切諸行空寂、不可得、愛盡、離欲、涅槃。」此中云何有我而言：「如是知、如是見，是名見法。」？』</td>
-    <td id='p10'>10. “Then I said to the monks, ‘I already know that form is impermanent, that feeling … conception … volition … awareness is imperament, that all actions are impermanent, that all things are selfless, and that <em>nirvāṇa</em> is peaceful cessation. Still, I don’t delight in hearing, “All actions are empty, at peace, and unobtainable. End craving, become free of desire, and <em>nirvāṇa</em>.’ Isn’t there a self who says, ‘Knowing and seeing in this way is called seeing the Dharma.’”’</td>
+    <td class='ch' title='t99.2.66c8'>「我爾時語諸比丘言： 『我已知色無常，受、想、行、識無常，一切行無常，一切法無我，涅槃寂滅。 然我不喜聞： 「一切諸行空、寂、不可得。 愛盡、離欲、涅槃。」 此中云何有我而言： 「如是知、如是見，是名見法。」？』</td>
+    <td id='p10'>10. “Then I said to the monks, ‘I already know that form is impermanent, that feeling … conception … volition … awareness is impermanent, that all actions are impermanent, that all things are selfless, and that <em>nirvāṇa</em> is peaceful cessation. Still, I don’t delight in hearing, “All actions are empty, at peace, and unobtainable. End craving, become free of desire, and <em>nirvāṇa</em>.” Isn’t there a self who says, “Knowing and seeing in this way is called seeing the Dharma”?’</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66b29'>「我爾時作是念：『是中誰復有力堪能為我說法，令我知法、見法？』我時復作是念：『尊者阿難今在拘睒彌國瞿師羅園，曾供養親覲世尊，佛所讚歎，諸梵行者皆悉知識。彼必堪能為我說法，令我知法、見法。』</td>
-    <td id='p11'>11. “Then I thought, ‘Who is there who has the ability and capacity to teach me the Dharma and make me know and see the Dharma?’ Again, I thought, ‘Venerable Ānanda is staying at Ghoṣila Park of Kauśāmbī. He had supported the Bhagavān and was close to him. He was praised by the Buddha, and those of the religious practice all know him. Surely, he can teach me the Dharma and make me know and see the Dharma.’</td>
+    <td class='ch' title='t99.2.66c12'>「我爾時作是念： 『是中誰復有力堪能為我說法，令我知法、見法？』 我時復作是念： 『尊者阿難今在拘睒彌國瞿師羅園。 曾供養親覲世尊。 佛所讚歎，諸梵行者皆悉知識。 彼必堪能為我說法，令我知法、見法。』</td>
+    <td id='p11'>11. “Then I thought, ‘Who is there who has the ability and capacity to teach me the Dharma, to make me know and see the Dharma?’ Again, I thought, ‘Venerable Ānanda is staying at Ghoṣila Park of Kauśāmbī. He had supported the Bhagavān and was close to him. He was praised by the Buddha, and those of the religious practice all know him. Surely, he has the capacity to teach me the Dharma and make me know and see the Dharma.’</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66b29'>「善哉！尊者阿難今當為我說法，令我知法、見法。」</td>
+    <td class='ch' title='t99.2.66c17'>「善哉！尊者阿難今當為我說法，令我知法、見法。」</td>
     <td id='p12'>12. “It would be good if the Venerable Ānanda would teach me the Dharma now and make me know and see the Dharma.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66c18'>時，尊者阿難語闡陀言：「善哉！闡陀！我意大喜，我慶仁者能於梵行人前，無所覆藏，破虛偽刺。闡陀！愚癡凡夫所不能解色無常，受、想、行、識無常，一切諸行無常，一切法無我，涅槃寂滅。汝今堪受勝妙法，汝今諦聽，當為汝說。」</td>
-    <td id='p13'>13. Venerable Ānanda then said to Chandaka, “Good, Chandaka! I would be happy to do that. Congratulations, sir, for being able to come before someone of the religious practice without hiding anything and destroying the thorn of pretense. Chandaka, foolish, ordinary people aren’t able to understand that form is impermanent … that feeling … conception … volition … awareness is impermanent. All actions are impermanent. All things are selfless. <em>Nirvāṇa</em> is peaceful cessation.”</td>
+    <td class='ch' title='t99.2.66c18'>時，尊者阿難語闡陀言： 「善哉，闡陀！我意大喜， 我慶仁者能於梵行人前，無所覆藏，破虛偽刺。 闡陀，愚癡凡夫所不能解色無常⋯受⋯想⋯行⋯識無常。 一切諸行無常。 一切法無我。 涅槃寂滅。 汝今堪受勝妙法。 汝今諦聽，當為汝說。」</td>
+    <td id='p13'>13. Venerable Ānanda then said to Chandaka, “Good, Chandaka! I would be happy to do that. Congratulations, sir, for being able to come before someone of the religious practice without hiding anything and destroying the thorn of pretense. Chandaka, foolish, ordinary people aren’t able to understand that form is impermanent … that feeling … conception … volition … awareness is impermanent. All actions are impermanent. All things are selfless. <em>Nirvāṇa</em> is peaceful cessation. Now, you have the capacity to accept the higher teaching. Listen closely now, and I will explain it for you.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66c23'>時，闡陀作是念：「我今歡喜得勝妙心、得踊悅心，我今堪能受勝妙法。」</td>
-    <td id='p14'>14. Chandaka then thought, “Now, I’m feeling joyous! I’ve reached a more sublime and celebratory feeling. Now, I’m capable of receiving a more sublime Dharma.”</td>
+    <td class='ch' title='t99.2.66c23'>時，闡陀作是念： 「我今歡喜！ 得勝妙心、得踊悅心。 我今堪能受勝妙法。」</td>
+    <td id='p14'>14. Chandaka then thought, “Now, I’m feeling joyous! I’ve reached a more sublime and celebratory state of mind. I’m capable of receiving a more sublime Dharma now.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66c25'>爾時，阿難語闡陀言：「我親從佛聞，教摩訶迦旃延言：『世人顛倒依於二邊，若有、若無，世人取諸境界，心便計著。</td>
+    <td class='ch' title='t99.2.66c25'>爾時，阿難語闡陀言： 「我親從佛聞，教摩訶迦旃延言： 『世人顛倒依於二邊，若有、若無。 世人取諸境界，心便計著。</td>
     <td id='p15'>15. Ānanda then said to Chandaka, “I personally heard the Buddha say this when he was teaching Mahākātyāyana: ‘Worldly people are deluded by their reliance on two extreme positions, either existence or non-existence. Worldly people grasp at their domains,<sup id="ref4"><a href="#n4">4</a></sup> and then their minds become attached to what they imagine.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66c25'>迦旃延！若不受、不取、不住、不計於我，此苦生時生、滅時滅。迦旃延！於此不疑、不惑、不由於他而能自知，是名正見，如來所說。所以者何？</td>
+    <td class='ch' title='t99.2.66c27'>「『迦旃延，若不受、不取、不住、不計於我，此苦生時生、滅時滅。 迦旃延，於此不疑、不惑。 不由於他而能自知。 是名正見，如來所說。 所以者何？</td>
     <td id='p16'>16. “‘Kātyāyana, if one doesn’t accept, grasp, abide, or imagine the self, then when pain arises here, it arises, and it ceases when it ceases. Kātyāyana, they won’t be doubtful or confused. They’ll know for themselves instead of getting it from someone else. This is called right view as explained by the Tathāgata. Why is that?</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66c25'>迦旃延！如實正觀世間集者，則不生世間無見，如實正觀世間滅，則不生世間有見。</td>
+    <td class='ch' title='t99.2.67a2'>「『迦旃延，如實正觀世間集者，則不生世間無見。 如實正觀世間滅，則不生世間有見。</td>
     <td id='p17'>17. “‘Kātyāyana, someone who truely and correctly contemplates the formation of the world won’t give rise to the view that the world doesn’t exist. Truly and correctly contemplating the cessation of the world, they won’t give rise to the view that the world exists.<sup id="ref5"><a href="#n5">5</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66c25'>迦旃延！如來離於二邊，說於中道，所謂此有故彼有，此生故彼生，謂緣無明有行，乃至生、老、病、死、憂、悲、惱、苦集；所謂此無故彼無，此滅故彼滅，謂無明滅則行滅，乃至生、老、病、死、憂、悲、惱、苦滅。』」</td>
-    <td id='p18'>18. “‘Kātyāyana, the Tathāgata has abandoned these two extreme positions and teaches the middle way. That is, “That exists because this exists. That arises because this arose.” This refers to there being action because of ignorance … and then birth, old age, illness, death, sorrow, lamentation, trouble, and suffering form. That is, “That doesn’t exist because this doesn’t exist. That ceases because this ceased.” This refers to action ceasing when ignorance ceases … and then birth, old age, illness, death, sorrow, lamentation, trouble, and pain cease.’”</td>
+    <td class='ch' title='t99.2.67a4'>「『迦旃延，如來離於二邊，說於中道。 所謂：「此有故彼有；此生故彼生。」 謂緣無明有行⋯乃至⋯生、老、病、死、憂、悲、惱、苦集。 所謂：「此無故彼無，此滅故彼滅。」 謂無明滅則行滅⋯乃至⋯生、老、病、死、憂、悲、惱、苦滅。』」</td>
+    <td id='p18'>18. “‘Kātyāyana, the Tathāgata has abandoned these two extreme positions and teaches the middle way. That is, “That exists because this exists, and that arises because this arose.” This refers to there being action because of ignorance … and then birth, old age, illness, death, sorrow, lamentation, trouble, and suffering form. That is, “That doesn’t exist because this doesn’t exist. That ceases because this ceased.” This refers to action ceasing when ignorance ceases … and then birth, old age, illness, death, sorrow, lamentation, trouble, and pain cease.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.67a8'>尊者阿難說是法時，闡陀比丘遠塵離垢，得法眼淨。爾時，闡陀比丘見法、得法、知法、起法，超越狐疑，不由於他，於大師教法，得無所畏。</td>
+    <td class='ch' title='t99.2.67a8'>尊者阿難說是法時，闡陀比丘遠塵離垢，得法眼淨。 爾時，闡陀比丘見法、得法、知法、起法，超越狐疑。 不由於他，於大師教法，得無所畏。</td>
     <td id='p19'>19. When Venerable Ānanda taught this Dharma, the monk Chandaka became free of dust and defilement, and his Dharma eye was purified. The monk Chandaka then saw the Dharma, knew the Dharma, produced the Dharma, and went beyond any uncertainty. He became confident about the Dharma taught by the great teacher without relying on others.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.67a8'>恭敬合掌白尊者阿難言：「正應如是。如是智慧梵行，善知識教授教誡說法。我今從尊者阿難所，聞如是法，於一切行皆空、皆悉寂、不可得、愛盡、離欲、滅盡、涅槃，心樂正住解脫，不復轉還，不復見我，唯見正法。」</td>
-    <td id='p20'>20. He then saluted Venerable Ānanda with his palms together and said, “Precisely as it should be! Thus does a wise and good friend in the religious practice teach, confer, and instruct another in the Dharma. Now, I’ve heard the Dharma in this way from Venerable Ānanda. All actions are empty. They are all peaceful and unobtainable. Craving has ended, and I’ve become free of desire. With complete cessation and <em>nirvāṇa</em>, the mind is happy, properly abiding, and liberated. It doesn’t revert back again and doesn’t have views of self anymore. One only sees the correct Dharma.”</td>
+    <td class='ch' title='t99.2.67a11'>恭敬合掌白尊者阿難言： 「正應如是！ 如是智慧梵行，善知識教授教誡說法。 我今從尊者阿難所，聞如是法： 『於一切行皆空、皆悉寂、不可得。 愛盡、離欲。 滅盡、涅槃，心樂正住解脫。 不復轉還，不復見我。 唯見正法。』」</td>
+    <td id='p20'>20. He then saluted Venerable Ānanda with his palms together and said, “Precisely as it should be! Thus does a wise and good friend in the religious practice teach, confer, and instruct another in the Dharma. Now, I’ve heard the Dharma in this way from Venerable Ānanda: ‘All actions are empty. They are all peaceful and unobtainable. Craving has ended, and I’ve become free of desire. With complete cessation and <em>nirvāṇa</em>, the mind is happy, properly abiding, and liberated. It doesn’t revert back again and doesn’t have views of self anymore. One only sees the correct Dharma.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.67a16'>時，阿難語闡陀言：「汝今得大善利，於甚深佛法中，得聖慧眼。」</td>
+    <td class='ch' title='t99.2.67a16'>時，阿難語闡陀言： 「汝今得大善利，於甚深佛法中，得聖慧眼。」</td>
     <td id='p21'>21. Ānanda said to Chandaka, “Now, you’ve gained a great and good benefit, having obtained the noble wisdom eye of the profound Buddha Dharma.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.67a18'>時，二正士展轉隨喜，從坐而起，各還本處。</td>
+    <td class='ch' title='t99.2.67a18'>時，二正士展轉隨喜。 從坐而起，各還本處。</td>
     <td id='p22'>22. Those two proper gentlemen [each heard that teaching and] were in turn delighted by it. They rose from their seats, and each returned to his home.</td>
   </tr>
 <tr>
-  <td class="ch" title='t99.2.xxxx'></td>
+  <td class='ch' title='t99.2.67a20'></td>
   <td class='subheading'>Summary Verse</td>
 </tr>
 <tr>
-  <td class="ch" title='t99.2.xxxx'><ul class='verse'>
-    <li>輸屢那三種<br/>
-    無明亦有三<br/>
-    無間等及滅<br/>
-    富留那、闡陀</li>
+  <td title='t99.2.67a20'><ul class='verse'>
+    <li class='ch'>輸屢那三種、<br/>
+    無明亦有三、<br/>
+    無間等及滅、<br/>
+    富留那、闡陀。</li>
   </ul></td>
   <td><ul class='verse'>
     <li>[36-38] Three about Sroṇa,<br/>
@@ -126,22 +126,22 @@ next: SA1_46.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 262 in the <cite>Taisho</cite> edition and no. 45 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0066b06" target="_blank">T99.2.66b6-67a21</a>). It’s parallel with <a href="https://suttacentral.net/sn22.90" target="_blank">SN 22.90</a>. It picks up where the <cite>Parinirvāṇa Sūtra</cite> left off regarding the story of Chandaka, who had served as the Buddha’s servant before he left home. As a monk, he couldn’t overcome his arrogance and was verbally abusive. When asked how to deal with his bad behavior, the Buddha advised the Saṅgha to avoid speaking to him if it continued. Here, we have a story of Chandaka making amends with the Saṅgha after the Buddha had passed away. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>senior monks.</em>. C. 上座比丘, P. <em>therā bhikkhū</em>. C. 上座 (lit. “high seat”) likely translated the equiv. of P. <em>thera</em>. It refers to an elder monk who serves as the head of a <em>saṅgha</em> or monastery. Such a monastic would get the “high” or “head” seat when the assembly is seated together. I’ve translated the term functionally as “senior.”<br/>
-<em>Residence of Sages in the Deer Preserve of Bārāṇasī.</em> C. ⋯波羅㮈國、仙人住處、鹿野苑, P. <em>bārāṇasiyaṁ viharanti isipatane migadāye</em>. An equiv. of S. Bārāṇasī is here translit. as EMC. pua-la-na = G. Barana[si] (the final syllable being dropped). The other two place names are translated.<br/>
-<em>Residence of Sages.</em> 仙人住處 lit. means “sage’s residence” or “hermitage,” which presumably translates G. *Iṣipadana (P. Isipatana, S. Ṛṣipatana). This translation, which was the consensus during the pre-Tang era in China, does not match the accepted understanding of the place name in Pali and some Sanskrit sources.<br/>
-Later Chinese translators and commentators were aware of this situation. Yijing, Xuanzang, and other Tang-era translators working with Sanskrit texts translated it as we would expect: “Falling Place of Sages” (仙人墮處). The Korean Yogācāra commentator Doryun (釋道倫, u.d.) explained (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T42n1828_p0777a08" target="_blank">T1828.42.777a8-10</a>): “The old name ‘Residence of Sages’ is wrong. Once, there was a king who led his maidens on a tour of the park. Five hundred sages were in the sky who were about to be liberated, and they fell down upon seeing them. Therefore, the place was called ‘Falling Place of Sages.’” (There’s likely wordplay here since breaking one’s celebacy was considered a “downfall,” but the story here represents this literally as falling from the sky while flying or hovering.)<br/>
-This was not always the case, however. In Xuanzang’s translation of the <cite>Mahāvibhāṣā</cite>, we find this passage (<a href="https://cbetaonline.dila.edu.tw/zh/T27n1545_p0917a20" target="_blank">T1545.27.917a20-29</a>): “Question: Why was it called the Lecture Place of Sages (仙人論處)? Answer: Some say that <em>buddha</em>s are certain to turn the Dharma wheel at this location. They explain that the Buddha was the supreme sage who first turned the Dharma wheel there. Therefore, it was named ‘The Lecture Place of Sages.’ There are those who say that <em>buddha</em>s are not certain to turn the Dharma wheel in this location. They explain that it should be called ‘The Residence of Sages’ (仙人住處). That is, when <em>buddha</em>s appear in the world, those <em>buddha</em>s are the great sages and their noble disciples are the assembly of sages that reside there. When <em>buddha</em>s don’t appear in the world, there are solitary awakened ones who reside there. When there aren’t any solitary awakened ones, there are worldly sages with the five powers who reside there. It’s named ‘The Residence of Sages’ because there has always been, are, and will be sages who reside there. Some say it should be named ‘The Falling Place of Sages’ (仙人墮處). There was a time when five hundred sages were flying in the sky and something happened that caused them to fall down there at the same time.”<br/>
-This indicates that Buddhists interpreted this place name in at least three different ways. This might have been the result of variable pronunciations that resulted in differing meanings, or it may have simply been unclear from the start. For whatever reason, ‘Residence of Sages’ was the preferred reading during the pre-Sanskrit period in China when the Āgamas were translated, which gave way in later eras to the ‘Falling Place of Sages’ reading that is also seen in Theravāda sources.<br/>
-<em>the Deer Preserve.</em> C. 鹿野苑, P. <em>migadāya</em>, S. <em>mṛgadāya</em>. Lit. “Deer Wilderness Preserve.”[<a href="#ref2">back</a>]</li>
-<li id="n3"><em>door key</em>. C. 戶鈎, P. <em>avāpuraṇa</em>. The C. lit. means “door hook,” P. interprets <em>avāpuraṇa</em> as a key to a door, and S. <em>avāpuraṇa</em> means a “filling or covering.” Given this confusing situation, I’ve translated the term in the way that makes the most sense given the context, which happens to agree with the Pali reading. The object in question may have been part of a simpler locking mechanism than a lock and key. [<a href="#ref3">back</a>]</li>
-<li id="n4"><em>domains</em>. C. 諸境界. It’s not clear what is meant here. Lit., 境界 means a geographical region or domain. In SĀ, it appears to translate P. <em>ṭhāna</em> (S. <em>sthāna</em>) and <em>visaya</em> (S. <em>viśaya</em>). In this particular passage, there is no Pali term that corresponds to it in SN 22.90. I take it to mean one’s immediately experienced environment, but it could mean philosophical positions, which would perhaps refer to a person’s world view. [<a href="#ref4">back</a>]</li>
-<li id="n5"><em>doesn’t exist … exists</em>. This passage is revealing in that we can infer something about the notions of “existing” and “not existing” in Buddhist discourse. We can see that the concept of something existing implied permanence, either of the thing itself or something intrinsic to it. This can be seen in the argument that the aggregates cannot be self because they are impermanent. On the other hand, non-existence doesn’t necessarily mean something is absent. We see this point here with the observation that the world doesn’t exist because it ceases. The subtext is that a <em>permanent</em> world doesn’t exist because it ceases.<br/>
-It would seem that Buddhists were often contending with people who thought of existence and non-existence in absolute or ontological terms. Buddhists themselves had a naturalist view of existence as a temporary and effervescent condition. They could observe animal and plant species that do not disappear from the world, but the individuals of each species are continuously being born and dying, like bubbles forming and bursting. It would make sense that they extended this concrete observation to a general principle of the world itself. We see this expressed in the Buddhist myths of the world’s cycle of formation and destruction, which are being referenced in this passage. See, e.g., the stories of the world’s destruction and formation found in <a href="../../dirgha/DA_30-9.html" target="_blank">Chapters 9</a> and <a href="../../dirgha/DA_30-12.html" target="_blank">12</a> of <a href="../../dirgha/index.html" target="_blank">DĀ 30</a>. [<a href="#ref5">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 262 in the <cite>Taisho</cite> edition and no. 45 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0066b06" target="_blank">T99.2.66b6-67a21</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0053a15" target="_blank">Y30.53a15-6a5</a>). It’s parallel with <a href="https://suttacentral.net/sn22.90" target="_blank">SN 22.90</a>. It picks up where the <cite>Parinirvāṇa Sūtra</cite> left off regarding the story of Chandaka, who had served as the Buddha’s servant before he left home. As a monk, he couldn’t overcome his arrogance and was verbally abusive. When asked how to deal with his bad behavior, the Buddha advised the Saṅgha to avoid speaking to him if it continued. Here, we have a story of Chandaka making amends with the Saṅgha after the Buddha had passed away. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>senior monks.</em>. C. <span class="ch">上座比丘</span>, P. <em>therā bhikkhū</em>. C. <span class="ch">上座</span> (lit. “high seat”) likely translated the equiv. of P. <em>thera</em>. It refers to an elder monk who serves as the head of a <em>saṅgha</em> or monastery. Such a monastic would get the “high” or “head” seat when the assembly is seated together. I’ve translated the term functionally as “senior.”</p>
+<p><em>Residence of Sages in the Deer Preserve of Bārāṇasī.</em> C. <span class="ch">⋯波羅㮈國、仙人住處、鹿野苑</span>, P. <em>bārāṇasiyaṁ viharanti isipatane migadāye</em>. An equiv. of S. Bārāṇasī is here translit. as EMC. pua-la-na = G. Barana[si] (the final syllable being dropped). The other two place names are translated.</p>
+<p><em>Residence of Sages.</em> <span class="ch">仙人住處</span> lit. means “sage’s residence” or “hermitage,” which presumably translates G. *Iṣipadana (P. Isipatana, S. Ṛṣipatana). This translation, which was the consensus during the pre-Tang era in China, does not match the accepted understanding of the place name in Pali and some Sanskrit sources.</p>
+<p>Later Chinese translators and commentators were aware of this situation. Yijing, Xuanzang, and other Tang-era translators working with Sanskrit texts translated it as we would expect: “Falling Place of Sages” (<span class="ch">仙人墮處</span>). The Korean Yogācāra commentator Doryun (<span class="ch">釋道倫</span>, u.d.) explained (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T42n1828_p0777a08" target="_blank">T1828.42.777a8-10</a>): “The old name ‘Residence of Sages’ is wrong. Once, there was a king who led his maidens on a tour of the park. Five hundred sages were in the sky who were about to be liberated, and they fell down upon seeing them. Therefore, the place was called ‘Falling Place of Sages.’” (There’s likely wordplay here since breaking one’s celebacy was considered a “downfall,” but the story here represents this literally as falling from the sky while flying or hovering.)</p>
+<p>This was not always the case, however. In Xuanzang’s translation of the <cite>Mahāvibhāṣā</cite>, we find this passage (<a href="https://cbetaonline.dila.edu.tw/zh/T27n1545_p0917a20" target="_blank">T1545.27.917a20-29</a>): “Question: Why was it called the Lecture Place of Sages (<span class="ch">仙人論處</span>)? Answer: Some say that <em>buddha</em>s are certain to turn the Dharma wheel at this location. They explain that the Buddha was the supreme sage who first turned the Dharma wheel there. Therefore, it was named ‘The Lecture Place of Sages.’ There are those who say that <em>buddha</em>s are not certain to turn the Dharma wheel in this location. They explain that it should be called ‘The Residence of Sages’ (<span class="ch">仙人住處</span>). That is, when <em>buddha</em>s appear in the world, those <em>buddha</em>s are the great sages and their noble disciples are the assembly of sages that reside there. When <em>buddha</em>s don’t appear in the world, there are solitary awakened ones who reside there. When there aren’t any solitary awakened ones, there are worldly sages with the five powers who reside there. It’s named ‘The Residence of Sages’ because there has always been, are, and will be sages who reside there. Some say it should be named ‘The Falling Place of Sages’ (<span class="ch">仙人墮處</span>). There was a time when five hundred sages were flying in the sky and something happened that caused them to fall down there at the same time.”</p>
+<p>This indicates that Buddhists interpreted this place name in at least three different ways. This might have been the result of variable pronunciations that resulted in differing meanings, or it may have simply been unclear from the start. For whatever reason, ‘Residence of Sages’ was the preferred reading during the pre-Sanskrit period in China when the Āgamas were translated, which gave way in later eras to the ‘Falling Place of Sages’ reading that is also seen in Theravāda sources.</p>
+<p><em>the Deer Preserve.</em> C. <span class="ch">鹿野苑</span>, P. <em>migadāya</em>, S. <em>mṛgadāya</em>. Lit. “Deer Wilderness Preserve.” [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>door key</em>. C. <span class="ch">戶鈎</span>, P. <em>avāpuraṇa</em>. The C. lit. means “door hook,” P. interprets <em>avāpuraṇa</em> as a key to a door, and S. <em>avāpuraṇa</em> means a “filling or covering.” Given this confusing situation, I’ve translated the term in the way that makes the most sense given the context, which happens to agree with the Pali reading. The object in question may have been part of a simpler locking mechanism than a lock and key. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p><em>domains</em>. C. <span class="ch">諸境界</span>. It’s not clear what is meant here. Lit., <span class="ch">境界</span> means a geographical region or domain. In SĀ, it appears to translate P. <em>ṭhāna</em> (S. <em>sthāna</em>) and <em>visaya</em> (S. <em>viśaya</em>). In this particular passage, there is no Pali term that corresponds to it in SN 22.90. I take it to mean one’s immediately experienced environment, but it could mean philosophical positions, which would perhaps refer to a person’s world view. [<a href="#ref4">back</a>]</p></li>
+<li id="n5"><p><em>doesn’t exist … exists</em>. This passage is revealing in that we can infer something about the notions of “existing” and “not existing” in Buddhist discourse. We can see that the concept of something existing implied permanence, either of the thing itself or something intrinsic to it. This can be seen in the argument that the aggregates cannot be self because they are impermanent. On the other hand, non-existence doesn’t necessarily mean something is absent. We see this point here with the observation that the world doesn’t exist because it ceases. The subtext is that a <em>permanent</em> world doesn’t exist because it ceases.</p>
+<p>It would seem that Buddhists were often contending with people who thought of existence and non-existence in absolute or ontological terms. Buddhists themselves had a naturalist view of existence as a temporary and effervescent condition. They could observe animal and plant species that do not disappear from the world, but the individuals of each species are continuously being born and dying, like bubbles forming and bursting. It would make sense that they extended this concrete observation to a general principle of the world itself. We see this expressed in the Buddhist myths of the world’s cycle of formation and destruction, which are being referenced in this passage. See, e.g., the stories of the world’s destruction and formation found in <a href="../../dirgha/DA_30-9.html" target="_blank">Chapters 9</a> and <a href="../../dirgha/DA_30-12.html" target="_blank">12</a> of <a href="../../dirgha/index.html" target="_blank">DĀ 30</a>. [<a href="#ref5">back</a>]</p></li>
 </ol>
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 2 January 2026</p>
+<p class='revised'>Last Revised: 8 January 2024</p>
 
 <hr/>
