--- a/01_agama/samyukta/01/SA1_54.md
+++ b/01_agama/samyukta/01/SA1_54.md
@@ -14,91 +14,91 @@ next: SA1_55.html
   <th class='ch'>（二七一） 低舍責</th>
   <th class='en'>54 (271). Scolding Tiṣya</th>
   <tr>
-    <td class="ch" title='t125.2.71a4'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.71a4'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71a5'>爾時，有比丘名曰低舍與眾多比丘集於食堂。 語諸比丘言： 「諸尊，我不分別於法，不樂修梵行，多樂睡眠。 疑惑於法。」</td>
-    <td id='p2'>2. It was then that there was a monk named Tiṣya<sup id="ref2"><a href="#n2">2</a></sup> who gathered with a group of monks in the alms hall. He said to the monks, “Venerables, I’m unable to discern the Dharma, I’m not happy cultivating the religious life, and I delight so much in sleeping. I’m having doubts about the Dharma.”</td>
+    <td class='ch' title='t99.2.71a5'>爾時，有比丘名曰低舍與眾多比丘集於食堂。 語諸比丘言： 「諸尊，我不分別於法，不樂修梵行，多樂睡眠。 疑惑於法。」</td>
+    <td id='p2'>2. It was then that there was a monk named Tiṣya<sup id="ref2"><a href="#n2">2</a></sup> who gathered with a group of monks in the alms hall. He said to the monks, “Venerables, I’m unable to discern the Dharma, I’m not happy cultivating the religious practice, and I delight so much in sleeping. I’m having doubts about the Dharma.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71a7'>爾時，眾中有一比丘往詣佛所，禮佛足，却住一面。 白佛言： 「世尊，低舍比丘以眾多比丘集於食堂。作如是說，唱言： 『我不能分別於法，不樂修梵行，多樂睡眠。 疑惑於法。』」</td>
-    <td id='p3'>3. There was then a monk in that group who went to the Buddha, bowed at the Buddha’s feet, and withdrew to sit at one side. He said to the Buddha, “Bhagavān, the monk Tiṣya gathered with a group of monks in the alms hall and declared: ‘I’m unable to discern the Dharma, I’m not happy cultivating the religious life, and I delight so much in sleeping. I’m having doubts about the Dharma.’”</td>
+    <td class='ch' title='t99.2.71a7'>爾時，眾中有一比丘往詣佛所，禮佛足，却住一面。 白佛言： 「世尊，低舍比丘以眾多比丘集於食堂。作如是說，唱言： 『我不能分別於法，不樂修梵行，多樂睡眠。 疑惑於法。』」</td>
+    <td id='p3'>3. There was then a monk in that group who went to the Buddha, bowed at the Buddha’s feet, and withdrew to sit at one side. He said to the Buddha, “Bhagavān, the monk Tiṣya gathered with a group of monks in the alms hall and declared: ‘I’m unable to discern the Dharma, I’m not happy cultivating the religious practice, and I delight so much in sleeping. I’m having doubts about the Dharma.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71a12'>佛告比丘： 「是低舍比丘是愚癡人。 不守根門，飲食不知量，初夜、後夜心不覺悟。 懈怠嬾惰，不勤精進，不善觀察思惟善法。 彼於分別法，心樂修梵行，離諸睡眠，於正法中離諸疑惑，無有是處。 若當比丘守護根門，飲食知量，初夜、後夜，覺悟精進，觀察善法。 樂分別法，樂修梵行，離於睡眠，心不疑法，斯有是處。」</td>
-    <td id='p4'>4. The Buddha told the monk, “This monk Tiṣya is a foolish man. He doesn’t guard the doors of his faculties, doesn’t know how much food is enough, and he isn’t awake in the first and last watch of the night. He’s indolent and lazy, doesn’t make diligent effort, and doesn’t skillfully investigate and consider the good Dharma. It’s not possible for him to discern the Dharma, feel happy cultivating the religious life, be free of sleepiness, or be free of doubts about the correct Dharma. If he’s going to be a monk, he should guard the doors of his faculties, know what’s enough food, stay awake and apply himself during the first and last watch of the night, and observe the good Dharma. Then it’ll be possible for him to delight in discerning the Dharma, enjoy cultivating the religious life, be free of sleepiness, and not have doubts about the Dharma.”<sup id="ref3"><a href="#n3">3</a></sup></td>
+    <td class='ch' title='t99.2.71a12'>佛告比丘： 「是低舍比丘是愚癡人。 不守根門，飲食不知量，初夜、後夜心不覺悟。 懈怠嬾惰，不勤精進，不善觀察思惟善法。 彼於分別法，心樂修梵行，離諸睡眠，於正法中離諸疑惑，無有是處。 若當比丘守護根門，飲食知量，初夜、後夜，覺悟精進，觀察善法。 樂分別法，樂修梵行，離於睡眠，心不疑法，斯有是處。」</td>
+    <td id='p4'>4. The Buddha told the monk, “This monk Tiṣya is a foolish man. He doesn’t guard the doors of his faculties, doesn’t know how much food is enough, and he isn’t awake in the first and last watch of the night. He’s indolent and lazy, doesn’t make diligent effort, and doesn’t skillfully investigate and consider the good Dharma. It’s not possible for him to discern the Dharma, feel happy cultivating the religious practice, be free of sleepiness, or be free of doubts about the correct Dharma. If he’s going to be a monk, he should guard the doors of his faculties, know what’s enough food, stay awake and apply himself during the first and last watch of the night, and observe the good Dharma. Then it’ll be possible for him to delight in discerning the Dharma, enjoy cultivating the religious practice, be free of sleepiness, and not have doubts about the Dharma.”<sup id="ref3"><a href="#n3">3</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71a19'>爾時，世尊告一比丘： 「汝往語低舍比丘言：『大師呼汝。』」</td>
+    <td class='ch' title='t99.2.71a19'>爾時，世尊告一比丘： 「汝往語低舍比丘言：『大師呼汝。』」</td>
     <td>The Bhagavān then told a monk, “You, go tell the monk Tiṣya, ‘The great teacher has summoned you.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71a21'>比丘白佛： 「唯然，受教。」 前禮佛足，詣低舍所。 而作是言： 「長老低舍，世尊呼汝。」 低舍聞命，詣世尊所，稽首禮足，却住一面。</td>
-    <td id='p5'>5. That monk said to the Buddha, “Very well, I accept this instruction.” He first bowed at the Buddha’s feet and then went to Tiṣya. He told Tiṣya, “Venerable Tiṣya, the Bhagavān has summoned you.” Hearing this command, Tiṣya came to the Bhagavān, bowed at his feet, and withdrew to stand at one side.</td>
+    <td class='ch' title='t99.2.71a21'>比丘白佛： 「唯然，受教。」 前禮佛足，詣低舍所。 而作是言： 「長老低舍，世尊呼汝。」 低舍聞命，詣世尊所，稽首禮足，却住一面。</td>
+    <td id='p5'>5. That monk said to the Buddha, “Very well, I accept this instruction.” He first bowed at the Buddha’s feet and then went to Tiṣya.  He told Tiṣya, “Venerable Tiṣya, the Bhagavān has summoned you.” Hearing this command, Tiṣya came to the Bhagavān, bowed at his feet, and withdrew to stand at one side.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71a23'>爾時，世尊語低舍比丘言： 「汝，低舍！實與眾多比丘集於食堂，作是唱言： 『諸長老，我不能分別於法，不樂梵行，多樂睡眠，疑惑於法』耶？」</td>
-    <td id='p6'>6. The Bhagavān said to Tiṣya, “You, Tiṣya! Is it true that you gathered with a group of monks in the alms hall and declared, ‘Venerables, I’m unable to discern the Dharma, I’m not happy cultivating the religious life, I delight so much in sleeping, and I’m having doubts about the Dharma’?”</td>
+    <td class='ch' title='t99.2.71a23'>爾時，世尊語低舍比丘言： 「汝，低舍！實與眾多比丘集於食堂，作是唱言： 『諸長老，我不能分別於法，不樂梵行，多樂睡眠，疑惑於法』耶？」</td>
+    <td id='p6'>6. The Bhagavān said to Tiṣya, “You, Tiṣya! Is it true that you gathered with a group of monks in the alms hall and declared, ‘Venerables, I’m unable to discern the Dharma, I’m not happy cultivating the religious practice, I delight so much in sleeping, and I’m having doubts about the Dharma’?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71a27'>低舍白佛： 「實爾，世尊。」</td>
+    <td class='ch' title='t99.2.71a27'>低舍白佛： 「實爾，世尊。」</td>
     <td>Tiṣya said to the Buddha, “That’s true, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71a27'>佛問低舍： 「我今問汝，隨汝意答。 於意云何？ 若於色不離貪、不離欲、不離愛、不離念、不離渴，彼色若變、若異。 於汝意云何？ 當起憂、悲、惱、苦為不耶？」</td>
+    <td class='ch' title='t99.2.71a27'>佛問低舍： 「我今問汝，隨汝意答。 於意云何？ 若於色不離貪、不離欲、不離愛、不離念、不離渴，彼色若變、若異。 於汝意云何？ 當起憂、悲、惱、苦為不耶？」</td>
     <td id='p7'>7. The Buddha questioned Tiṣya, “Now, I’ll question you, and you tell me what you think. What do you think? Suppose one isn’t free of desire for, free of craving for, free of thoughts about, and free of thirst for form, and suppose that form changes and becomes different. What do you think? Won’t that produce sorrow, lamentation, trouble, and pain?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71b2'>低舍白佛： 「如是，世尊。 若於色不離貪、不離欲、不離愛、不離念、不離渴，彼色若變、若異，實起憂、悲、惱、苦。 世尊，實爾不異。」</td>
+    <td class='ch' title='t99.2.71b2'>低舍白佛： 「如是，世尊。 若於色不離貪、不離欲、不離愛、不離念、不離渴，彼色若變、若異，實起憂、悲、惱、苦。 世尊，實爾不異。」</td>
     <td>Tiṣya said to the Buddha, “Yes, Bhagavān. If someone isn’t free of desire for, free of craving for, free of thoughts about, and free of thirst for form and supposing that form changes and becomes different, then that’ll produce sorrow, lamentation, trouble, and pain. Bhagavān, that would be true were it not to change.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71b5'>佛告低舍： 「善哉！善哉，低舍！正應如是，不離貪欲說法。 低舍，於受⋯想⋯行⋯識不離貪、不離欲、不離愛、不離念、不離渴，彼識若變、若異。 於汝意云何？ 當起憂、悲、惱、苦為不耶？」</td>
+    <td class='ch' title='t99.2.71b5'>佛告低舍： 「善哉！善哉，低舍！正應如是，不離貪欲說法。 低舍，於受⋯想⋯行⋯識不離貪、不離欲、不離愛、不離念、不離渴，彼識若變、若異。 於汝意云何？ 當起憂、悲、惱、苦為不耶？」</td>
     <td id='p8'>8. The Buddha told Tiṣya, “Good, Tiṣya, good! That’s just the way someone who isn’t free of greed should be taught Dharma. Tiṣya, suppose one isn’t free of desire for, free of craving for, free of thoughts about, and free of thirst for feeling … conception … volition … awareness, and suppose that awareness changes and becomes different. What do you think? Won’t that produce sorrow, lamentation, trouble, and pain?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71b9'>低舍白佛： 「如是，世尊。 於識不離貪、不離欲、不離愛、不離念、不離渴，彼識若變、若異，實起憂、悲、惱、苦。 世尊，實爾不異。」</td>
+    <td class='ch' title='t99.2.71b9'>低舍白佛： 「如是，世尊。 於識不離貪、不離欲、不離愛、不離念、不離渴，彼識若變、若異，實起憂、悲、惱、苦。 世尊，實爾不異。」</td>
     <td>Tiṣya said to the Buddha, “Yes, Bhagavān. If someone isn’t free of desire for, free of craving for, free of thoughts about, and free of thirst for awareness, and supposing that awareness changes and becomes different, then that’ll produce sorrow, lamentation, trouble, and pain. Bhagavān, that would be true were it not to change.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71b12'>佛告低舍： 「善哉，善哉！正應如是，識不離貪欲說法。」</td>
+    <td class='ch' title='t99.2.71b12'>佛告低舍： 「善哉，善哉！正應如是，識不離貪欲說法。」</td>
     <td id='p9'>9. The Buddha told Tiṣya, “Good, good! That’s just the way someone who isn’t free of greed should be taught Dharma.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71b14'>佛告低舍： 「於意云何？ 若於色離貪、離欲、離愛、離念、離渴，彼色若變、若異。 時，當生憂、悲、惱、苦耶？」</td>
+    <td class='ch' title='t99.2.71b14'>佛告低舍： 「於意云何？ 若於色離貪、離欲、離愛、離念、離渴，彼色若變、若異。 時，當生憂、悲、惱、苦耶？」</td>
     <td id='p10'>10. The Buddha told Tiṣya, “What do you think? Suppose one is free of desire for, free of craving for, free of thoughts about, and free of thirst for form, and suppose that form changes and becomes different. Will that then produce sorrow, lamentation, trouble, and pain?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71b16'>低舍白佛： 「不也，世尊。 如是不異。」</td>
+    <td class='ch' title='t99.2.71b16'>低舍白佛： 「不也，世尊。 如是不異。」</td>
     <td>Tiṣya said to the Buddha, “No, Bhagavān. It would be so were it not to change.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71b17'>「於意云何？ 受、想、行、識，離貪、離欲、離愛、離念、離渴，彼識若變、若異。 當生憂、悲、惱、苦耶？」</td>
+    <td class='ch' title='t99.2.71b17'>「於意云何？ 受、想、行、識，離貪、離欲、離愛、離念、離渴，彼識若變、若異。 當生憂、悲、惱、苦耶？」</td>
     <td id='p11'>11. “What do you think? Suppose one is free of desire for, free of craving for, free of thoughts about, and free of thirst for feeling … conception … volition … awareness, and suppose that awareness changes and becomes different. Will that produce sorrow, lamentation, trouble, and pain?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71b19'>低舍答曰： 「不也，世尊。 如是不異。」</td>
+    <td class='ch' title='t99.2.71b19'>低舍答曰： 「不也，世尊。 如是不異。」</td>
     <td>Tiṣya answered, “No, Bhagavān. It would be so were it not to change.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71b20'>佛告低舍： 「善哉，善哉！低舍，今當說譬，大智慧者以譬得解。 如二士夫共伴行一路。 一善知路，一不知路。 其不知者語知路者作如是言： 『我欲詣某城、某村、某聚落。 當示我路？』</td>
+    <td class='ch' title='t99.2.71b20'>佛告低舍： 「善哉，善哉！低舍，今當說譬，大智慧者以譬得解。 如二士夫共伴行一路。 一善知路，一不知路。 其不知者語知路者作如是言： 『我欲詣某城、某村、某聚落。 當示我路？』</td>
     <td id='p12'>12. The Buddha told Tiṣya, “Good, good! Tiṣya, I will tell you a parable now, for wise people understand things with parables. Suppose two men are travelling together on a road. One of them knows the road well, while the other one doesn’t know the road. The one who doesn’t know it says to the one who does, ‘I want to go to such-and-such city, a certain town, or a certain village. Could you show me the way there?’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71b24'>「時，知路者即示彼路。 語言： 『士夫，從此道去，前見二道。 捨左，從右前行。 復，有坑㵎渠流。 復，當捨，左從右。 復，有叢林。 復，當捨左，從右。 汝當如是漸漸前行，得至某城。』」</td>
+    <td class='ch' title='t99.2.71b24'>「時，知路者即示彼路。 語言： 『士夫，從此道去，前見二道。 捨左，從右前行。 復，有坑㵎渠流。 復，當捨，左從右。 復，有叢林。 復，當捨左，從右。 汝當如是漸漸前行，得至某城。』」</td>
     <td id='p13'>13. “The one who knows the roads then shows him the way. He says, ‘A man who follows this path will come upon a fork in the road. Don’t go left, but turn right and continue. There’ll also be a river gorge. Again, you should not go left, but turn right. There’ll also be a forest. Again, don’t go left, but turn right. Proceeding in this way, you’ll eventually reach that particular city.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71b28'>佛告低舍： 「其譬如是： 不知路者譬愚癡凡夫。 其知路者譬如來、應、等正覺。 前二路者謂眾生狐疑。 左路者三不善法：貪、恚、害覺。 其右路者謂三善覺：出要離欲覺、不瞋覺、不害覺。 前行左路者謂邪見、邪志、邪語、邪業、邪命、邪方便、邪念、邪定。 前行右路者謂正見、正志、正語、正業、正命、正方便、正念、正定。 坑㵎渠流者謂瞋恚、覆障、憂、悲。 叢林者謂五欲功德也。 城者謂般涅槃。」</td>
+    <td class='ch' title='t99.2.71b28'>佛告低舍： 「其譬如是： 不知路者譬愚癡凡夫。 其知路者譬如來、應、等正覺。 前二路者謂眾生狐疑。 左路者三不善法：貪、恚、害覺。 其右路者謂三善覺：出要離欲覺、不瞋覺、不害覺。 前行左路者謂邪見、邪志、邪語、邪業、邪命、邪方便、邪念、邪定。 前行右路者謂正見、正志、正語、正業、正命、正方便、正念、正定。 坑㵎渠流者謂瞋恚、覆障、憂、悲。 叢林者謂五欲功德也。 城者謂般涅槃。」</td>
     <td id='p14'>14. The Buddha told Tiṣya, “That parable is thus: The man who didn’t know the road is like a foolish ordinary man. The one who knew the road is like the Tathāgata, Arhat, and Completely Awakened One. The first fork in the road is a sentient being having doubts. The road to the left is three unskillful things: greedy, hateful, and harmful perceptions. The road to the right is three skillful things: the escape of perceptions that are free of desire, hate, or harmfulness. Proceeding on the road to the left would be wrong view, wrong intention, wrong speech, wrong action, wrong livelihood, wrong method, wrong mindfulness, and wrong <em>samādhi</em>. Proceeding on the road to the right would be right view, right intention, right speech, right action, right livelihood, right method, right mindfulness, and right <em>samādhi</em>. The river gorge is hatred, hindrance, sorrow, and lamentation. The forest is the merits of five desires. The city is <em>parinirvāṇa</em>.”<sup id="ref4"><a href="#n4">4</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71c7'>佛告低舍： 「佛為大師，為諸聲聞所作已作。 如今當作哀愍悲念，以義安樂皆悉已作。 汝等今日，當作所作。 當於樹下，或空露地、山巖窟宅，敷草為座，善思正念。 修不放逸；莫令久後心有悔恨。 我今教汝。」</td>
+    <td class='ch' title='t99.2.71c7'>佛告低舍： 「佛為大師，為諸聲聞所作已作。 如今當作哀愍悲念，以義安樂皆悉已作。 汝等今日，當作所作。 當於樹下，或空露地、山巖窟宅，敷草為座，善思正念。 修不放逸；莫令久後心有悔恨。 我今教汝。」</td>
     <td id='p15'>15. The Buddha told Tiṣya, “The Buddha is the great teacher who has accomplished the task for his disciples. Now, he has accomplished all this with the goal of happiness out of sympathy and caring. Today, all of you should accomplish that task. You should go [to a place] under a tree, on open ground, or in a mountain grotto, spread out a seat of grass, and contemplate skillfully with right mindfulness. Cultivate it earnestly; don’t let yourselves have regrets about it later. Now, I have instructed you.”<sup id="ref5"><a href="#n5">5</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.71c12'>爾時，低舍聞佛所說歡喜，奉行。</td>
+    <td class='ch' title='t99.2.71c12'>爾時，低舍聞佛所說歡喜，奉行。</td>
     <td id='p16'>16. When Tiṣya heard what the Buddha taught, he rejoiced and approved.</td>
   </tr>
 </table>
@@ -108,12 +108,12 @@ next: SA1_55.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 271 in the <cite>Taisho</cite> edition and no. 54 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0071a04" target="_blank">T99.2.71a4-c13</a>). It’s parallel with <a href="https://suttacentral.net/sn22.84" target="_blank">SN 22.84</a>. Both this and the Pali parallel include details not found in the other, but overall the Pali version is a bit more detailed. One of the more significant differences is that this version uses the metaphor of <em>nirvāṇa</em> being a city, while the Theravāda version likens <em>nirvāṇa</em> to a flat and delightful parcel of land. The “city of <em>nirvāṇa</em>” was a recurring metaphor in northern Buddhist texts, and it’s interesting that the parallel passage in SN 22.84 does liken <em>nirvāṇa</em> to a happy destination. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>Tiṣya</em>. C. 低舍 (EMC. tei-ʃɪă), G. <em>tiśa</em> or <em>tiṣa</em>, P. <em>tissa</em>, S. <em>tiṣya</em>. The C. translit. matches G. attestations. I’ve adopted the S. equivalent. In SN 22.84, he is identified as a cousin of the Buddha. See <a href="https://www.palikanon.com/english/pali_names/t/tissa.htm" target="_blank">entry 14 on the name Tissa</a> in the <cite>Buddhist Dictionary of Pali Proper Names</cite> for more about this character in Theravāda sources. He was apparently known for napping too much among other things. [<a href="#ref2">back</a>]</li>
-<li id="n3">This lengthy criticism of Tiṣya doesn’t occur in SN 22.84, but it is apparently the inspiration of the title for this <em>sūtra</em> found in the summary verse after <a href="SA1_55.html" target="_blank">SĀ 1.55</a>, [<a href="#ref3">back</a>]</li>
-<li id="n4">This parable is a little different than the one in SN 22.84. Specifically, this version has two forks in the road, while in SN 22.84 there is an extra landmark on the way to the destination. Briefly, the metaphors in the Theravāda version are: The unskilled traveller is the ordinary person, and the skilled traveller is the Buddha. The fork in the road is doubt. The left-hand path is the wrong eightfold path. The right-hand path is the noble eightfold path. The forest grove is ignorance, low-lying marshes is sensual pleasures, and a large cliff is anger and distress. Finally, a level parkland represents <em>nirvāṇa</em>.<br/>
-It’s of interest to note that here the three things that constitute wrong or right intention in the eightfold path are placed before the practitioner reaches that path. This is not the case in SN 22.84. [<a href="#ref4">back</a>]</li>
-<li id="n5">The conclusion in SN 22.84 is quite brief: “Rejoice, Tissa, rejoice! I’m here to advise you, to support you, and to teach you” (<em>Abhirama, tissa, abhirama, tissa. Ahamovādena ahamanuggahena ahamanusāsaniyā”ti.</em>). [<a href="#ref5">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 271 in the <cite>Taisho</cite> edition and no. 54 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0071a04" target="_blank">T99.2.71a4-c13</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0002a12" target="_blank">Y30.2a12-3a3</a>). It’s parallel with <a href="https://suttacentral.net/sn22.84" target="_blank">SN 22.84</a>. Both this and the Pali parallel include details not found in the other, but overall the Pali version is a bit more detailed. One of the more significant differences is that this version uses the metaphor of <em>nirvāṇa</em> being a city, while the Theravāda version likens <em>nirvāṇa</em> to a flat and delightful parcel of land. The “city of <em>nirvāṇa</em>” was a recurring metaphor in northern Buddhist texts, and it’s interesting that the parallel passage in SN 22.84 does liken <em>nirvāṇa</em> to a happy destination. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>Tiṣya</em>. C. <span class="ch">低舍</span> (EMC. tei-ʃɪă), G. <em>tiśa</em> or <em>tiṣa</em>, P. <em>tissa</em>, S. <em>tiṣya</em>. The C. translit. matches G. attestations. I’ve adopted the S. equivalent. In SN 22.84, he is identified as a cousin of the Buddha. See <a href="https://www.palikanon.com/english/pali_names/t/tissa.htm" target="_blank">entry 14 on the name Tissa</a> in the <cite>Buddhist Dictionary of Pali Proper Names</cite> for more about this character in Theravāda sources. He was apparently known for napping too much among other things. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p>This lengthy criticism of Tiṣya doesn’t occur in SN 22.84, but it is apparently the inspiration of the title for this <em>sūtra</em> found in the summary verse after <a href="SA1_55.html" target="_blank">SĀ 1.55</a>. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p>This parable is a little different than the one in SN 22.84. Specifically, this version has two forks in the road, while in SN 22.84 there is an extra landmark on the way to the destination. Briefly, the metaphors in the Theravāda version are: The unskilled traveller is the ordinary person, and the skilled traveller is the Buddha. The fork in the road is doubt. The left-hand path is the wrong eightfold path. The right-hand path is the noble eightfold path. The forest grove is ignorance, low-lying marshes is sensual pleasures, and a large cliff is anger and distress. Finally, a level parkland represents <em>nirvāṇa</em>.</p>
+<p>It’s of interest to note that here the three things that constitute wrong or right intention in the eightfold path are placed before the practitioner reaches that path. This is not the case in SN 22.84. [<a href="#ref4">back</a>]</p></li>
+<li id="n5"><p>The conclusion in SN 22.84 is quite brief: “Rejoice, Tissa, rejoice! I’m here to advise you, to support you, and to teach you” (<em>Abhirama, tissa, abhirama, tissa. Ahamovādena ahamanuggahena ahamanusāsaniyā”ti.</em>). [<a href="#ref5">back</a>]</p></li>
 </ol>
 <hr/>
 
