--- a/01_agama/samyukta/01/SA1_56.md
+++ b/01_agama/samyukta/01/SA1_56.md
@@ -14,23 +14,23 @@ next: SA1_57.html
   <th class='ch'>（五九） 生、滅</th>
   <th class='en'>56 (59). Arising and Ceasing</th>
   <tr>
-    <td class="ch" title='t125.2.15b10'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.15b10'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.15b11'>爾時，世尊告諸比丘： 「有五受陰。 云何為五？ 色受陰，受⋯想⋯行⋯識受陰。 觀此五受陰是生滅法。 所謂：『此色、此色集、此色滅。 此受⋯想⋯行⋯識、此識集、此識滅。』</td>
+    <td class='ch' title='t99.2.15b11'>爾時，世尊告諸比丘： 「有五受陰。 云何為五？ 色受陰，受⋯想⋯行⋯識受陰。 觀此五受陰是生滅法。 所謂：『此色、此色集、此色滅。 此受⋯想⋯行⋯識、此識集、此識滅。』</td>
     <td id='p2'>2. It was then that the Bhagavān told the monks, “There are five acquired aggregates. What are the five? The acquired aggregate of form, feeling … conception … volition … and the acquired aggregate of awareness. Observe these five acquired aggregates as things that arise and cease. That is: ‘This is form, this is the formation of form, and this is the cessation of form. This is feeling … conception … volition … awareness, this is the formation of awareness, and this is the cessation of awareness.’</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.15b14'>「云何色集？云何色滅？ 云何受⋯想⋯行⋯識集？云何受⋯想⋯行⋯識滅？ 愛喜集是色集，愛喜滅是色滅。 觸集是受、想、行集，觸滅是受、想、行滅。 名色集是識集，名色滅是識滅。</td>
+    <td class='ch' title='t99.2.15b14'>「云何色集？云何色滅？ 云何受⋯想⋯行⋯識集？云何受⋯想⋯行⋯識滅？ 愛喜集是色集，愛喜滅是色滅。 觸集是受、想、行集，觸滅是受、想、行滅。 名色集是識集，名色滅是識滅。</td>
     <td id='p3'>3. “What is the formation of form, and what is the cessation of form? What is the formation of feeling … conception … volition … awareness, and what is the cessation of feeling … conception … volition … awareness? The formation of craving and delight is the formation of form, and the cessation of craving and delight is the cessation of form. The formation of contact is the formation of feeling, conception, and volition, and the cessation of contact is the cessation of feeling, conception, and volition. The formation of name and form is the formation of awareness, and the cessation of name and form is the cessation of awareness.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.15b18'>「比丘，如是色集、色滅。 是為色集、色滅。 如是受⋯想⋯行⋯識集，受⋯想⋯行⋯識滅。 是為受⋯想⋯行⋯識集，受⋯想⋯行⋯識滅。」</td>
+    <td class='ch' title='t99.2.15b18'>「比丘，如是色集、色滅。 是為色集、色滅。 如是受⋯想⋯行⋯識集，受⋯想⋯行⋯識滅。 是為受⋯想⋯行⋯識集，受⋯想⋯行⋯識滅。」</td>
     <td id='p4'>4. “Monks, it’s in this way that form forms and form ceases. This is the formation of form and the cessation of form. It’s in this way that feeling … conception … volition … awareness forms and feeling … conception … volition … awareness ceases. This is the formation of feeling … conception … volition … awareness and the cessation of feeling … conception … volition … awareness.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.15b20'>佛說此經已，時諸比丘聞佛所說歡喜，奉行。</td>
+    <td class='ch' title='t99.2.15b20'>佛說此經已，時諸比丘聞佛所說歡喜，奉行。</td>
     <td id='p5'>5. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
 </table>
@@ -40,7 +40,7 @@ next: SA1_57.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 59 in the <cite>Taisho</cite> edition and no. 56 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0015b10" target="_blank">T99.2.15b10-21</a>). It’s vaguely similar to <a href="https://suttacentral.net/sn22.5" target="_blank">SN 22.5</a>, but here three specific conditions for the five aggregates are identified, and the text doesn’t slide into recounting steps of the chain of dependent origination like the Pali <em>sutta</em> does. Instead, the aggregates themselves appear to be interpreted as steps of dependent origination. [<a href="#ref1">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 59 in the <cite>Taisho</cite> edition and no. 56 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0015b10" target="_blank">T99.2.15b10-21</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0002a12" target="_blank">Y30.2a12-3a3</a>). It’s vaguely similar to <a href="https://suttacentral.net/sn22.5" target="_blank">SN 22.5</a>, but here three specific conditions for the five aggregates are identified, and the text doesn’t slide into recounting steps of the chain of dependent origination like the Pali <em>sutta</em> does. Instead, the aggregates themselves appear to be interpreted as steps of dependent origination. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
