--- a/01_agama/samyukta/01/SA1_58.md
+++ b/01_agama/samyukta/01/SA1_58.md
@@ -91,7 +91,7 @@ next: SA1_59.html
 <li id="n1"><p>This is <em>sūtra</em> no. 61 in the <cite>Taisho</cite> edition and no. 58 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0015c14" target="_blank">T99.2.15c14-16a18</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0002a12" target="_blank">Y30.2a12-3a3</a>).</p>
 <p>This <em>sūtra</em> does not appear to have a direct parallel in Pali, though none of the content is particularly different. The definitions of the five aggregates are the same as those found in <a href="https://suttacentral.net/sn22.56" target="_blank">SN 22.56</a>, for instance, and the conclusion is vaguely equivalent, pointing to the ultimate liberation gained by understanding them.</p>
 <p>Perhaps the most interesting thing about this <em>sūtra</em> is the description of the <em>arhat</em>: “Their contaminants have been ended, and their task has been accomplished. They have set down the heavy burden and won their own reward. They’ve ended the bonds to existence, and their minds have been liberated with proper knowledge.” This is a simpler version of what we find in the introductions of early Mahāyāna <em>sūtra</em>s like the <cite>Perfection of Wisdom in 25,000 Lines</cite> or the <cite>Lotus Sutra</cite>. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>six kinds of feeling.</em> C. 六受身, P. <em>cha vedanākāyā</em>. Lit. “six bodies (or assemblages) of feelings.” The term <em>kāya</em> here refers to a multitude rather than the human body. Each of these kinds of feeling represents a plethora of feelings caused by one particular type of sensory experience (visual, etc.). This use of the term <em>kāya</em> is repeated for the other categories of six kinds of conception, intention, and awareness below. [<a href="#ref2">back</a>]</p></li>
+<li id="n2"><p><em>six kinds of feeling.</em> C. <span class="ch">六受身</span>, P. <em>cha vedanākāyā</em>. Lit. “six bodies (or assemblages) of feelings.” The term <em>kāya</em> here refers to a multitude rather than the human body. Each of these kinds of feeling represents a plethora of feelings caused by one particular type of sensory experience (visual, etc.). This use of the term <em>kāya</em> is repeated for the other categories of six kinds of conception, intention, and awareness below. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
