--- a/01_agama/samyukta/01/SA1_59.md
+++ b/01_agama/samyukta/01/SA1_59.md
@@ -44,7 +44,7 @@ next: SA1_60.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 62 in the <cite>Taisho</cite> edition and no. 59 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0016a19" target="_blank">T99.2.16a19-b12</a>). It does not appear to have a direct parallel, but it consists of standard content. The main point is to assert that attachment to views about self and the aggregates produces greed for them as well. [<a href="#ref1">back</a>]</p></li>
+<li id="n1"><p>This is <em>sūtra</em> no. 62 in the <cite>Taisho</cite> edition and no. 59 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0016a19" target="_blank">T99.2.16a19-b12</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0002a12" target="_blank">Y30.2a12-3a3</a>). It does not appear to have a direct parallel, but it consists of standard content. The main point is to assert that attachment to views about self and the aggregates produces greed for them as well. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
