--- a/01_agama/samyukta/01/SA1_169.md
+++ b/01_agama/samyukta/01/SA1_169.md
@@ -12,7 +12,7 @@ next: SA1_170.html
 
 <table class="trans">
   <th class='ch'>（五七） 我慢</th>
-  <th class='en'>1.169 (57). Self-conceit</th>
+  <th class='en'>1.169 (57). Self-Conceit</th>
   <tr>
     <td class='ch' title='t99.2.13c7'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
