--- a/01_agama/samyukta/01/SA1_43.md
+++ b/01_agama/samyukta/01/SA1_43.md
@@ -14,35 +14,35 @@ next: SA1_44.html
   <th class='ch'>（二六〇） 滅</th>
   <th class='en'>43 (260). Cessation</th>
   <tr>
-    <td class="ch" title='t99.2.65c12'>如是我聞：一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.65c12'>如是我聞：一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.65c13'>爾時，尊者舍利弗詣尊者阿難所，共相問訊已，却坐一面。時，尊者舍利弗問尊者阿難言：「欲有所問，仁者寧有閑暇見答以不？」</td>
+    <td class='ch' title='t99.2.65c13'>爾時，尊者舍利弗詣尊者阿難所，共相問訊已，却坐一面。時，尊者舍利弗問尊者阿難言：「欲有所問，仁者寧有閑暇見答以不？」</td>
     <td id='p2'>2. At the time, Venerable Śāriputra paid a visit to Venerable Ānanda. After they had exchanged greetings, he withdrew to sit at one side. Venerable Śāriputra then asked Venerable Ānanda, “I have a question I’d like to ask if you, sir, might have some time to answer it for me?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.65c16'>阿難言：「仁者且問，知者當答。」</td>
+    <td class='ch' title='t99.2.65c16'>阿難言：「仁者且問，知者當答。」</td>
     <td>Ānanda said, “Sir, you may ask your question. I’ll answer with what I know.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.65c16'>舍利弗言：「阿難，所謂滅者。云何為滅？誰有此滅？」</td>
+    <td class='ch' title='t99.2.65c16'>舍利弗言： 「阿難，所謂滅者。 云何為滅？ 誰有此滅？」</td>
     <td id='p3'>3. Śāriputra asked, “Ānanda, there’s the term ‘cessation.’ What is it that ceases? Who possesses this cessation?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.65c18'>阿難言：「舍利弗，五受陰是本行所作、本所思願，是無常、滅法。彼法滅故，是名為滅。云何為五？所謂色受陰是本行所作、本所思願，是無常、滅法。彼法滅故，是名為滅。如是受、想、行、識，是本行所作、本所思願，是無常、滅法。彼法滅故，是名為滅。」</td>
+    <td class='ch' title='t99.2.65c18'>阿難言：「舍利弗！五受陰是本行所作、本所思願，是無常、滅法，彼法滅故，是名為滅。云何為五？所謂色受陰是本行所作、本所思願，是無常、滅法，彼法滅故，是名為滅。如是受、想、行、識，是本行所作、本所思願，是無常、滅法，彼法滅故，是名為滅。」</td>
     <td id='p4'>4. Ānanda said, “Śāriputra, the five acquired aggregates created by past actions and wished for in the past are impermanent and subject to cessation. It’s cessation of those things that’s called ‘cessation.’ What are the five? The acquired aggregate of form created by past actions and wished for in the past is impermanent and subject to cessation. The cessation of that thing is called ‘cessation.’ In the same way, feeling … conception … volition … awareness created by past actions and wished for in the past is impermanent and subject to cessation. The cessation of that thing is called ‘cessation.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.65c23'>舍利弗言：「如是，如是。阿難，如汝所說，此五受陰是本行所作、本所思願，是無常、滅法。彼法滅故，是名為滅。云何為五？所謂色受陰是本行所作、本所思願，是無常、滅法。彼法滅故，是名為滅。如是受、想、行、識，是本行所作、本所思願，是無常、滅法。彼法滅故，是名為滅。</td>
+    <td class='ch' title='t99.2.65c23'>舍利弗言：「如是，如是。阿難！如汝所說，此五受陰是本行所作、本所思願，是無常、滅法，彼法滅故，是名為滅。云何為五？所謂色受陰是本行所作、本所思願，是無常、滅法，彼法滅故，是名為滅。如是受、想、行、識，是本行所作、本所思願，是無常、滅法，彼法滅故，是名為滅。</td>
     <td id='p5'>5. Śāriputra said, “Yes, yes! Ānanda, it’s as you say. These five acquired aggregates created by past actions and wished for in the past are impermanent and subject to cessation. It’s cessation of those things that’s called ‘cessation.’ What are the five? The acquired aggregate of form created by past actions and wished for in the past is impermanent and subject to cessation. The cessation of that thing is called ‘cessation.’ In the same way, feeling … conception … volition … awareness created by past actions and wished for in the past is impermanent and subject to cessation. The cessation of that thing is called ‘cessation.’</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.65c29'>「阿難，此五受陰，若非本行所作、本所思願者。云何可滅？阿難，以五受陰是本行所作、本所思願，是無常、滅法。彼法滅故，是名為滅。」</td>
+    <td class='ch' title='t99.2.65c29'>「阿難！此五受陰，若非本行所作、本所思願者。云何可滅？阿難！以五受陰是本行所作、本所思願，是無常、滅法，彼法滅故，是名為滅。」</td>
     <td id='p6'>6. “Ānanda, how could they cease if these five acquired aggregates were not created by actions in the past and wished for in the past? Ānanda, it’s because these five acquired aggregates were created in the past and wished for in the past that they are impermanent and subject to cessation. It’s their cessation that’s called ‘cessation.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t99.2.66a3'>時，二正士各聞所說，歡喜而去。</td>
+    <td class='ch' title='t99.2.66a3'>時，二正士各聞所說，歡喜而去。</td>
     <td id='p7'>7. When those two gentlemen each heard what was taught, they rejoiced and departed.</td>
   </tr>
 </table>
@@ -52,12 +52,11 @@ next: SA1_44.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 260 in the <cite>Taisho</cite> edition and no. 43 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0065c12" target="_blank">T99.2.65c12-66a4</a>). Here, there is a transition from teachings given by Śāriputra to those given by Ānanda. The closest parallel is found at <a href="https://suttacentral.net/sn22.21" target="_blank">SN 22.21</a> in which Ānanda asks the Buddha to define cessation, rather than Śāriputra asking Ānanda. The main difference between this and the Pali <em>sutta</em> is that here two causes that create the aggregates are identified and repeated throughout: past actions and the wish for them in the past. This likely refers to the Sarvāstivāda interpretation of dependent arising of a person, which places the first two steps, ignorance and action, as past causes for one’s present existence. See, e.g., the discussion of this topic in the <cite>Mahāvibhāṣā</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T27n1545_p0116b28" target="_blank">T1545.27.116b28ff</a>). [<a href="#ref1">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 260 in the <cite>Taisho</cite> edition and no. 43 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0065c12" target="_blank">T99.2.65c12-66a4</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0050a12" target="_blank">Y30.50a12-1a8</a>). Here, there is a transition from teachings given by Śāriputra to those given by Ānanda. The closest parallel is found at <a href="https://suttacentral.net/sn22.21" target="_blank">SN 22.21</a> in which Ānanda asks the Buddha to define cessation, rather than Śāriputra asking Ānanda. The main difference between this and the Pali <em>sutta</em> is that here two causes that create the aggregates are identified and repeated throughout: past actions and the wish for them in the past. This likely refers to the Sarvāstivāda interpretation of dependent arising of a person, which places the first two steps, ignorance and action, as past causes for one’s present existence. See, e.g., the discussion of this topic in the <cite>Mahāvibhāṣā</cite> (<a href="https://cbetaonline.dila.edu.tw/zh/T27n1545_p0116b28" target="_blank">T1545.27.116b28ff</a>). [<a href="#ref1">back</a>]</p></li>
 </ol>
-
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 4 March 2024</p>
+<p class='revised'>Last Revised: 8 January 2024</p>
 
 <hr/>
