--- a/01_agama/samyukta/01/SA1_44.md
+++ b/01_agama/samyukta/01/SA1_44.md
@@ -14,63 +14,63 @@ next: SA1_45.html
   <th class='ch'>（二六一） 富留那</th>
   <th class='en'>44 (261). Pūrṇa</th>
   <tr>
-    <td class="ch" title='t125.2.66a5'>如是我聞：一時，尊者阿難住拘睒彌國瞿師羅園。</td>
+    <td class='ch' title='t99.2.66a5'>如是我聞：一時，尊者阿難住拘睒彌國瞿師羅園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> Venerable Ānanda was staying at Ghoṣila Park of Kauśāmbī.<sup id="ref2"><a href="#n2">2</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a6'>時，尊者阿難告諸比丘：「尊者富留那彌多羅尼子年少初出家時，常說深法，作如是言：『阿難！[3]生法計是我，非不生。阿難！云何於生法計是我，非不生？色生，生是我，非不生。受、想、行、識生，生是我，非不生。譬如士夫手執明鏡及淨水鏡，自見面生，生故見，非不生。是故，阿難！色生，生故計是我，非不生。如是受、想、行、識生，生故計是我，非不生。云何？阿難！色是常耶？為無常耶？』</td>
+    <td class='ch' title='t99.2.66a6'>時，尊者阿難告諸比丘：「尊者富留那彌多羅尼子年少初出家時，常說深法，作如是言：『阿難！[3]生法計是我，非不生。阿難！云何於生法計是我，非不生？色生，生是我，非不生。受、想、行、識生，生是我，非不生。譬如士夫手執明鏡及淨水鏡，自見面生，生故見，非不生。是故，阿難！色生，生故計是我，非不生。如是受、想、行、識生，生故計是我，非不生。云何？阿難！色是常耶？為無常耶？』</td>
     <td id='p2'>2. Venerable Ānanda then addressed the monks, “When Venerable Pūrṇa Maitrāyaṇīputra<sup id="ref3"><a href="#n3">3</a></sup> was a junior who had recently left home, he often discussed the profound Dharma. He would say such things as this: ‘Ānanda, something that arises is considered to be self, not something that doesn’t arise. Ānanda, how is it that something that arises is considered to be self and not something that doesn’t arise? When form arises, that gives rise to self, not when it doesn’t arise. When feeling … conception … volition … awareness arises, that gives rise to self, not when it doesn’t arise. It’s like a man who sees his own face appear when he holds a bright mirror in his hand or when he looks at his reflection in clear water. He sees it because it appears, not because it doesn’t appear. Therefore, Ānanda, when form arises, that gives rise to self, not when it doesn’t arise. When feeling … conception … volition … awareness arises, that gives rise to self, not when it doesn’t arise. How is it, Ānanda? Is form permanent, or is it impermanent?’</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a15'>「答曰：『無常。』</td>
+    <td class='ch' title='t99.2.66a15'>「答曰：『無常。』</td>
     <td>“I replied, ‘Impermanent.’</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a15'>「又問：『無常者，是苦耶？』</td>
+    <td class='ch' title='t99.2.66a15'>「又問：『無常者，是苦耶？』</td>
     <td id='p3'>3. “He also asked, ‘Is something that’s impermanent painful?’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a15'>「答曰：『是苦。』</td>
+    <td class='ch' title='t99.2.66a15'>「答曰：『是苦。』</td>
     <td>“I replied, ‘It’s painful.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a16'>「又問：『若無常、苦者，是變易法，聖弟子於中復計我、異我、相在不？』</td>
+    <td class='ch' title='t99.2.66a16'>「又問：『若無常、苦者，是變易法，聖弟子於中復計我、異我、相在不？』</td>
     <td id='p4'>4. “He also asked, ‘If something is impermanent and painful, it’s subject to change. Would a noble disciple consider that to be self, different than self, or that either is present in the other?’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a17'>「答曰：『不也。』</td>
+    <td class='ch' title='t99.2.66a17'>「答曰：『不也。』</td>
     <td>“I replied, ‘No.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a17'>「『如是受、想、行、識為是常耶？為無常耶？』</td>
+    <td class='ch' title='t99.2.66a17'>「『如是受、想、行、識為是常耶？為無常耶？』</td>
     <td id='p5'>5. “‘In this way, is feeling … conception … volition … awareness permanent or impermanent?’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a18'>「答曰：『無常。』</td>
+    <td class='ch' title='t99.2.66a18'>「答曰：『無常。』</td>
     <td>“I replied, ‘Impermanent.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a19'>「『若無常，是苦耶？』</td>
+    <td class='ch' title='t99.2.66a19'>「『若無常，是苦耶？』</td>
     <td id='p6'>6. “‘If it’s impermanent, is that painful?’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a19'>「答曰：『是苦。』</td>
+    <td class='ch' title='t99.2.66a19'>「答曰：『是苦。』</td>
     <td>“I replied, ‘It’s painful.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a19'>「又問：『若無常、苦者，是變易法，多聞聖弟子於中寧復計我、異我、相在不？』</td>
+    <td class='ch' title='t99.2.66a19'>「又問：『若無常、苦者，是變易法，多聞聖弟子於中寧復計我、異我、相在不？』</td>
     <td id='p7'>7. “He also asked, ‘If something is impermanent and painful, then it’s subject to change. Would a noble disciple consider that to be self, different than self, or that either is present in the other?’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a21'>「答曰：『不也。』</td>
+    <td class='ch' title='t99.2.66a21'>「答曰：『不也。』</td>
     <td>“I replied, ‘No.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66a21'>「『阿難！是故，色若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。如是受、想、行、識，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在如實知，如實觀察。如是觀者，聖弟子於色生厭、離欲、解脫：「我生已盡，梵行已立，所作已作。」自知不受後有。如是受、想、行、識，生厭、離欲、解脫：「我生已盡，梵行已立，所作已作。」自知不受後有。』</td>
+    <td class='ch' title='t99.2.66a21'>「『阿難！是故，色若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。如是受、想、行、識，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在如實知，如實觀察。如是觀者，聖弟子於色生厭、離欲、解脫：「我生已盡，梵行已立，所作已作。」自知不受後有。如是受、想、行、識，生厭、離欲、解脫：「我生已盡，梵行已立，所作已作。」自知不受後有。』</td>
     <td id='p8'>8. “‘Therefore, Ānanda, whether forms are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not different than self, and neither are present in the other. In this way, whether feelings … conceptions … volitions … instances of awareness are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not different than self, and neither are present in the other when they are truly known and truly observed. When they are observed in this way, a noble disciple becomes disillusioned with form, becomes free of desire for it, and is freed from it: “My births have been ended, the religious practice has been established, and the task has been accomplished.” They themselves know they won’t be subject to a later existence. In this way, they become disillusioned with feeling … conception … volition … awareness, becomes free of desire for it, and is freed from it: “My births have been ended, the religious practice has been established, and the task has been accomplished.” They themselves know they won’t be subject to a later existence.’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.66b2'>「諸比丘當知，彼尊者於我有大饒益，我從彼尊者所聞法已，遠塵離垢，得法眼淨。我從是來，常以此法為四眾說，非餘外道沙門、婆羅門出家者說。」</td>
+    <td class='ch' title='t99.2.66b2'>「諸比丘當知，彼尊者於我有大饒益，我從彼尊者所聞法已，遠塵離垢，得法眼淨。我從是來，常以此法為四眾說，非餘外道沙門、婆羅門出家者說。」</td>
     <td id='p9'>9. “Monks, you should know that that Venerable was of great benefit to me. After I heard the Dharma from that Venerable, I became free of dust and defilement, and my Dharma eye was purified. To this day, I often teach the four assemblies this Dharma and not the teachings of any other ascetic or priest of another religion who has left home.”<sup id="ref4"><a href="#n4">4</a></sup></td>
   </tr>
 </table>
@@ -80,11 +80,11 @@ next: SA1_45.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 261 in the <cite>Taisho</cite> edition and no. 44 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0066a05" target="_blank">T99.2.66a5-b5</a>). It’s parallel with <a href="https://suttacentral.net/sn22.83" target="_blank">SN 22.83</a>. Aside from minor details like the location of the discourse, a major difference is that here it is the arising of the aggregates that generate views about self. In the Pali <em>sutta</em>, it’s clinging to the aggregates that does this. A possible explanation for this different reading is that the keyword was a verb like S. <em>upādayati</em>, which can mean “to generate, bring about” and certainly could be rendered as 生. S. <em>upādāya</em>, on the other hand, has the same meanings as P. <em>upādāya</em> (“appropriating, acquiring, depending upon, together with, by means of”), but which is often translated to English as “clinging.”<br/>
-It’s of interest to note that the illustrating metaphors of someone seeing their face in a mirror or a pool of water makes better sense when the verb is read as “arising” rather than “clinging.” I rendered the verb 生 as “to appear” here because of the context of seeing one’s reflection, but the verb is the same and lit. means “to arise.” The upshot of this difference is that it is the existence of the aggregates that causes people to form views about something being a self (read: soul). If they did not arise, then that wouldn’t happen, and this is what <em>parinirvāṇa</em> entails. [<a href="#ref1">back</a>]</li>
-<li id="n2"><em>Ghoṣila Park of Kauśāmbī</em>. C. 拘睒彌國、瞿師羅園 (EMC. gɪu-ṣïi-la + “park,” kɪu-ʃɪem-mbiĕ + “country”), G. ?, P. Kosambī Ghositārāma, S. Kauśāmbī Ghoṣilārāma. The C. translit. of the park’s name matches S. rather than P. attestations, but I can find no attestations of this place name in G. sources available to me. The translit. of the country is between the P. and S. pronunciations, perhaps Pr. Kośambi (the EMC. vowel <em>ɪu</em> usu. corresponds to Indic <em>o</em>). It’s of interest re: the phonology of EMC. that the translit. supports reading 彌 as <em>mbiĕ</em> rather than <em>miĕ</em> since it seems fairly certain that Pr. Kosambī would be pronounced with a <em>-bī-</em> ending. [<a href="#ref2">back</a>]</li>
-<li id="n3"><em>Pūrṇa Maitrāyaṇīputra</em>. C. 富留那彌多羅尼子 (EMC. pɪəu-lɪəu-n(d)a miĕ-ta-la-ṇɪi), G. Puṃna (or Purna) Maṃtraṇi (or Metraṇi)?, P. Puṇṇa Mantāṇiputta, S. Pūrṇa Maitrāyaṇīputra. The C. translit. appears to sound out “Purna Metraṇi.” G. Purna for S. Pūrṇa is attested in G. sources, but I have not found an example of the G. equiv. of S. Maitrāyaṇī (or P. Mantāṇi). We do have attestations of G. <em>metra</em> (S. <em>maitra</em>, P. <em>metta</em>) and <em>maṃtra</em> (S. <em>mantra</em>, P. <em>manta</em>). Our C. translit. shares features of both the S. and P. versions of the name. It would appear to have suffered from confusion over time, given that the differences betw. all three versions are difficult to reconcile. The main question is: Was the root of the name S. <em>maitra</em> or <em>mantra</em>? Regardless, I’ve followed my usu. convention of adopting the S. version as a matter of convenience. [<a href="#ref3">back</a>]</li>
-<li id="n4">This is one of the rare cases of an Āgama <em>sūtra</em> not concluding with the standard closely statement. I wonder if it wasn’t a teaching given by Ānanda after the Buddha’s <em>parinirvāṇa</em>, as it sounds like a elder reminiscing about the past. As we shall see, the next <em>sūtra</em> is explicitly set in the time after the Buddha had passed away, and perhaps it was placed with this <em>sūtra</em> for that reason. [<a href="#ref4">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 261 in the <cite>Taisho</cite> edition and no. 44 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0066a05" target="_blank">T99.2.66a5-b5</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0052a01" target="_blank">Y30.52a1-53a1</a>). It’s parallel with <a href="https://suttacentral.net/sn22.83" target="_blank">SN 22.83</a>. Aside from minor details like the location of the discourse, a major difference is that here it is the arising of the aggregates that generate views about self. In the Pali <em>sutta</em>, it’s clinging to the aggregates that does this. A possible explanation for this different reading is that the keyword was a verb like S. <em>upādayati</em>, which can mean “to generate, bring about” and certainly could be rendered as <span class="ch">生</span>. S. <em>upādāya</em>, on the other hand, has the same meanings as P. <em>upādāya</em> (“appropriating, acquiring, depending upon, together with, by means of”), but which is often translated to English as “clinging.”</p>
+<p>It’s of interest to note that the illustrating metaphors of someone seeing their face in a mirror or a pool of water makes better sense when the verb is read as “arising” rather than “clinging.” I rendered the verb <span class="ch">生</span> as “to appear” here because of the context of seeing one’s reflection, but the verb is the same and lit. means “to arise.” The upshot of this difference is that it is the existence of the aggregates that causes people to form views about something being a self (read: soul). If they did not arise, then that wouldn’t happen, and this is what <em>parinirvāṇa</em> entails. [<a href="#ref1">back</a>]</p></li>
+<li id="n2"><p><em>Ghoṣila Park of Kauśāmbī</em>. C. <span class="ch">拘睒彌國、瞿師羅園</span> (EMC. gɪu-ṣïi-la + “park,” kɪu-ʃɪem-mbiĕ + “country”), G. ?, P. Kosambī Ghositārāma, S. Kauśāmbī Ghoṣilārāma. The C. translit. of the park’s name matches S. rather than P. attestations, but I can find no attestations of this place name in G. sources available to me. The translit. of the country is between the P. and S. pronunciations, perhaps Pr. Kośambi (the EMC. vowel <em>ɪu</em> usu. corresponds to Indic <em>o</em>). It’s of interest re: the phonology of EMC. that the translit. supports reading <span class="ch">彌</span> as <em>mbiĕ</em> rather than <em>miĕ</em> since it seems fairly certain that Pr. Kosambī would be pronounced with a <em>-bī-</em> ending. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>Pūrṇa Maitrāyaṇīputra</em>. C. <span class="ch">富留那彌多羅尼子</span> (EMC. pɪəu-lɪəu-n(d)a miĕ-ta-la-ṇɪi), G. Puṃna (or Purna) Maṃtraṇi (or Metraṇi)?, P. Puṇṇa Mantāṇiputta, S. Pūrṇa Maitrāyaṇīputra. The C. translit. appears to sound out “Purna Metraṇi.” G. Purna for S. Pūrṇa is attested in G. sources, but I have not found an example of the G. equiv. of S. Maitrāyaṇī (or P. Mantāṇi). We do have attestations of G. <em>metra</em> (S. <em>maitra</em>, P. <em>metta</em>) and <em>maṃtra</em> (S. <em>mantra</em>, P. <em>manta</em>). Our C. translit. shares features of both the S. and P. versions of the name. It would appear to have suffered from confusion over time, given that the differences betw. all three versions are difficult to reconcile. The main question is: Was the root of the name S. <em>maitra</em> or <em>mantra</em>? Regardless, I’ve followed my usu. convention of adopting the S. version as a matter of convenience. [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p>This is one of the rare cases of an Āgama <em>sūtra</em> not concluding with the standard closely statement. I wonder if it wasn’t a teaching given by Ānanda after the Buddha’s <em>parinirvāṇa</em>, as it sounds like a elder reminiscing about the past. As we shall see, the next <em>sūtra</em> is explicitly set in the time after the Buddha had passed away, and perhaps it was placed with this <em>sūtra</em> for that reason. [<a href="#ref4">back</a>]</p></li>
 </ol>
 <hr/>
 
