--- a/01_agama/samyukta/01/SA1_47.md
+++ b/01_agama/samyukta/01/SA1_47.md
@@ -14,139 +14,139 @@ next: SA1_48.html
   <th class='ch'>（二六四） 小土摶</th>
   <th class='en'>47 (264). A Clod of Dirt</th>
   <tr>
-    <td class="ch" title='t125.2.67c4'>如是我聞：一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.67c4'>如是我聞：一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.67c5'>爾時，有異比丘於禪中思惟，作是念：「頗有色常、恒、不變易、正住耶？如是受、想、行、識，常、恒、不變易、正住耶？」</td>
+    <td class='ch' title='t99.2.67c5'>[13]爾時，有異比丘於禪中思惟，作是念：「頗有色常、恒、不變易、正住耶？如是受、想、行、識，常、恒、不變易、正住耶？」</td>
     <td id='p2'>2. It was then that a certain monk had this thought while contemplating in meditation, “Isn’t there a form that remains permanent, eternal, unchanging, and the same?<sup id="ref2"><a href="#n2">2</a></sup> … feeling … conception … volition … awareness that remains permanent, eternal, unchanging, and the same?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.67c7'>是比丘晡時從禪起，往詣佛所，頭面禮足，却住一面，白佛言：「世尊！我於禪中思惟，作是念：『頗有色常、恒、不變易、正住耶？如是受、想、行、識，常、恒、不變易、正住耶？』今日世尊，頗有色常、恒、不變易、正住耶？頗有受、想、行、識，常、恒、不變易、正住耶？」</td>
+    <td class='ch' title='t99.2.67c7'>是比丘晡時從禪起，往詣佛所，頭面禮足，却住一面，白佛言：「世尊！我於禪中思惟，作是念：『頗有色常、恒、不變易、正住耶？如是受、想、行、識，常、恒、不變易、正住耶？』今[14]日世尊：『頗有色常、恒、不變易、正住耶？頗有受、想、行、識，常、恒、不變易、正住耶？』」</td>
     <td id='p3'>3. This monk rose from his meditation in the afternoon and went to the Buddha. He bowed his head at the Buddha’s feet and withdrew to stand to one side. He then said to the Buddha, “Bhagavān, I was contemplating in meditation and had this thought, ‘Isn’t there a form that remains permanent, eternal, unchanging, and the same? … feeling … conception … volition … awareness that remains permanent, eternal, unchanging, and the same?’ Now, I ask the Bhagavān, ‘Isn’t there a form that remains permanent, eternal, unchanging, and the same? … feeling … conception … volition … awareness that remains permanent, eternal, unchanging, and the same?’”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.67c13'>爾時，世尊手執小土摶，告彼比丘言：「汝見我手中土摶不？」</td>
+    <td class='ch' title='t99.2.67c13'>爾時，世尊手執小土摶，告彼比丘言：「汝見我手中土摶不？」</td>
     <td id='p4'>4. The Bhagavān then held up a small clod of dirt<sup id="ref3"><a href="#n3">3</a></sup> in his hand and asked that monk, “Do you see this clod of dirt in my hand?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.67c14'>比丘白佛：「已見。世尊！」</td>
+    <td class='ch' title='t99.2.67c14'>比丘白佛：「已見。世尊！」</td>
     <td>The monk said to the Buddha, “I see it, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.67c15'>「比丘！如是少土，我不可得。若我可得者，則是常、恒、不變易、正住法。」</td>
+    <td class='ch' title='t99.2.67c15'>「比丘！如是少土，我不可得。若我可得者，則是常、恒、不變易、正住法。」</td>
     <td id='p5'>5. “Monk, I can’t find even this small amount of earth [that remains always the same]. If I could find it, then something would remain permanent, eternal, unchanging, and the same.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.67c16'>佛告比丘：「我自憶宿命，長夜修福，得諸勝妙可愛果報之事。曾於七年中，修習慈心，經七劫成壞，不還此世。七劫壞時生光音天，七劫成時還生梵世，空宮殿中作大梵王，無勝、無上，領千世界。從是已後，復三十六反，作天帝釋。</td>
+    <td class='ch' title='t99.2.67c16'>佛告比丘：「我自憶宿命，長夜修福，得諸勝妙可愛果報之事。曾於七年中，修習慈心，經七劫成壞，不還此世。七劫壞時生光音天，七劫成時還生梵世，空宮殿中作大梵王，無勝、無上，領千世界。從是[15]已後，復三十六反，作天帝釋。</td>
     <td id='p6'>6. The Buddha told the monk, “I myself recall a past life during which I cultivated merits for a long night and attained greater, sublime, and delightful rewards. I once cultivated kind thoughts for seven years. For seven eons of formation and destruction, I didn’t return to this world. During those seven eons of destruction, I was born in the Ābhāsvara Heaven. During those seven eons of formation, I was reborn in the Brahma world. I became the Great King Brahmā in an empty palace, who was the unequalled and unsurpassed ruler of a thousand worlds. After that, I was born as Lord Śakra thirty-six times.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.67c16'>「復百千反，作轉輪聖王，領四天下，正法治化，七寶具足，所謂輪寶、象寶、馬寶、摩尼寶、玉女寶、主藏臣寶、主兵臣寶；千子具足，皆悉勇健；於四海內，其地平正，無諸毒刺，不威、不迫，以法調伏。</td>
+    <td class='ch' title='t99.2.67c16'>「復百千反，作轉輪聖王，領四天下，正法治化，七寶具足，所謂輪寶、象寶、馬寶、摩尼寶、玉女寶、主藏臣寶、主兵臣寶；千子具足，皆悉勇健；於四海內，其地平正，無諸毒刺，不威、不迫，以法調伏。</td>
     <td id='p7'>7. “I also became a noble wheel-turning king a hundred thousand times who ruled the four [continents] under heaven. I governed with the correct Dharma and possessed the seven treasures, which are the wheel treasure, elephant treasure, horse treasure, jewel treasure, beautiful woman treasure, treasurer treasure, and army general treasure. I also had a thousand sons who were courageous. Within the bounds of the four seas, my lands were level plains that lacked poisons or thorns, weren’t severe, weren’t confining, and were tamed by the Dharma.<sup id="ref4"><a href="#n4">4</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.67c26'>「灌頂王法有八萬四千龍象，皆以眾寶莊嚴而挍餝之，寶網覆上，建立寶幢，布薩象王最為導首，朝、晡二時自會殿前。我時念言：『是大群象，日日再反往來，蹈殺眾生無數，願令四萬二千象百年一來。』即如所願，八萬四千象中，四萬二千象百年一至。</td>
+    <td class='ch' title='t99.2.67c26'>「灌頂王法有八萬四千龍象，皆以眾寶莊嚴而挍餝之，寶網覆上，建立寶幢，布薩象王最為導首，朝、晡二時自會殿前。我時念言：『是大群象，日日再反往來，蹈殺眾生無數，願令四萬二千象百年一來。』即如所願，八萬四千象中，四萬二千象百年一至。</td>
     <td id='p8'>8. “It’s the way of anointed kings that they have 84,000 <em>nāga</em> elephants decorated with many jeweled ornaments. They’re covered with jeweled netting and carry jeweled banners. Their leader is an elephant king named Upavasatha.<sup id="ref5"><a href="#n5">5</a></sup> They would gather in front of the palace twice a day, in the morning and afternoon. At the time, I thought, ‘This great herd of elephants comes here twice a day, trampling innumerable living things to death. I would rather have 42,000 elephants come once per century instead.’ Then, they did as I wished. 42,000 of those 84,000 elephants would come once a century.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68a3'>「灌頂王法復有八萬四千匹馬，亦以純金為諸乘具，金網覆上，婆羅馬王為其導首。</td>
+    <td class='ch' title='t99.2.68a3'>「灌頂王法復有八萬四千匹馬，亦[1]以純金為諸乘具，金網覆上，[2]婆羅馬王為其導首。</td>
     <td id='p9'>9. “Another rule of anointed kings is that they have 84,000 horse teams with chariots made of pure gold and covered with gold netting. Their leader is the horse king named Vālaha.<sup id="ref6"><a href="#n6">6</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68a5'>「灌頂王法有八萬四千四種寶車，所謂金車、銀車、琉璃車、頗梨車，師子、虎、豹皮、雜色欽婆羅以為覆襯，䟦求毗闍耶難提音聲之車為其導首。</td>
+    <td class='ch' title='t99.2.68a5'>「灌頂王法有八萬四千四種寶車，所謂金車、銀車、琉璃車、頗梨車，師子、虎、豹皮、雜色欽婆羅以為覆[3]襯，䟦求毗闍耶難提音聲之車為其導首。</td>
     <td id='p10'>10. “Another rule of anointed kings is that they have 84,000 chariots made of four treasures: gold chariots, silver chariots, beryl chariots, and crystal chariots. They were covered with cushions of lion, tiger, and leopard skin as well as variegated wool fabric.<sup id="ref7"><a href="#n7">7</a></sup> Their leader was the chariot called Vaijayantaghoṣa.<sup id="ref8"><a href="#n8">8</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68a8'>「灌頂王法領八萬四千城，安隱豐樂，人民熾盛，拘舍婆提城而為上首。</td>
+    <td class='ch' title='t99.2.68a8'>「灌頂王法領八萬四千城，安隱豐樂，人民熾盛，[4]拘舍婆提城而為上首。</td>
     <td id='p11'>11. “Another rule of anointed kings is that they govern 84,000 cities, which are secure, bountiful, pleasant, and have flourishing populations. Their leader is the city Kuśavatī.<sup id="ref9"><a href="#n9">9</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68a10'>「灌頂王法有八萬四千四種宮殿，所謂金、銀、琉璃、頗梨、摩尼琉璃，由訶而為上首。</td>
+    <td class='ch' title='t99.2.68a10'>「灌頂王法有八萬四千四種宮殿，所謂金、銀、琉璃、頗梨、摩尼琉璃，由訶而為上首。</td>
     <td id='p12'>12. “Another rule of anointed kings is that they have 84,000 palaces made of the four treasures: gold and silver, beryl, crystal, and emerald gems. Yoha is their leader.<sup id="ref10"><a href="#n10">10</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68a12'>「比丘！灌頂王法有八萬四千四種寶床，所謂金、銀、琉璃、頗梨，種種繒褥、氍氀、𣯾㲪、迦陵伽臥具以敷其上，安置丹枕。</td>
+    <td class='ch' title='t99.2.68a12'>「比丘！灌頂王法有八萬四千四種寶床，所謂金、銀、琉璃、頗梨，種種繒褥、氍氀、𣯾㲪、迦陵伽臥具以敷其上，安置丹枕。</td>
     <td id='p13'>13. “Monk, another rule of anointed kings is that they have 84,000 beds made of four treasures: gold, silver, beryl, and crystal. They have a variety of silk coverlets, wool blankets and serges, or antelope<sup id="ref11"><a href="#n11">11</a></sup> bedding with pillows placed on top.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68a14'>「復次，比丘！灌頂王法復有八萬四千四種衣服，所謂迦尸細衣、芻摩衣、頭鳩羅衣、拘沾婆衣。</td>
+    <td class='ch' title='t99.2.68a14'>「復次，比丘！灌頂王法復有八萬四千四種衣服，所謂迦尸細衣、芻摩衣、頭鳩羅衣、拘沾婆衣。</td>
     <td id='p14'>14. “Furthermore, monk, another rule of anointed kings is that they have 84,000 articles of four kinds of clothing: silk cloth, linen cloth, <em>dukūla</em> cloth, and <em>kukova</em> (?) cloth.<sup id="ref12"><a href="#n12">12</a></sup></td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68a17'>「復次，比丘！灌頂王法有八萬四千玉女，所謂剎利女、似剎利女，況復餘女。</td>
+    <td class='ch' title='t99.2.68a17'>「復次，比丘！灌頂王法有八萬四千玉女，所謂剎利女、似剎利女，況復餘女。</td>
     <td id='p15'>15. “Furthermore, monk, another rule of anointed kings is that they have 84,000 beautiful women who are warrior women or resemble warrior women, to say nothing of other women.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68a18'>「復次，比丘！灌頂王法有八萬四千飲食，眾味具足。比丘！八萬四千玉女中，唯以一人以為給侍；八萬四千寶衣，唯著一衣；八萬四千寶床，唯臥一床；八萬四千宮殿，唯處一殿；八萬四千城，唯居一城，名拘舍婆提；八萬四千寶車，唯乘一車，名毘闍耶難提瞿沙，出城遊觀；八萬四千寶馬，唯乘一馬，名婆羅訶，毛尾紺色；八萬四千龍象，唯乘一象，名布薩陀，出城遊觀。</td>
+    <td class='ch' title='t99.2.68a18'>「復次，比丘！灌頂王法有八萬四千[10]飲食，眾味具足。比丘！八萬四千玉女中，唯以一人以為給侍；八萬四千寶衣，唯著一衣；八萬四千寶床，唯臥一床；八萬四千宮殿，唯處一殿；八萬四千城，唯居一城，名拘舍婆提；八萬四千寶車，唯乘一車，名[11]毘闍耶難提瞿沙，出城遊觀；八萬四千寶馬，唯乘一馬，名婆羅訶，毛尾紺色；八萬四千龍象，唯乘一象，名[12]布薩陀，出城遊觀。</td>
     <td id='p16'>16. “Furthermore, monk, another rule of anointed kings is that they have 84,000 meals replete with many flavors. Monk, among the 84,000 beautiful women, there’s only one of them who attends to the king. Of his 84,000 treasure clothes, there’s only one that he wears. Of the 84,000 treasure beds, there’s only one that he lies on. Of the 84,000 palaces, there’s only one hall where he presides. Of the 84,000 cities, there’s only one where he lives, which is called Kuśavatī. Of the 84,000 treasure chariots, there’s only one that he rides when he leaves the city to go touring, which is called Vaijayantaghoṣa. Of the 84,000 treasure horses, there’s only one horse that he rides, which is named Vālaha and has a crimson-colored mane and tail. Of the 84,000 <em>nāga</em> elephants, there’s only one elephant that he rides when he leaves the city to go touring, which is named Upavasatha.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68a27'>「比丘！此是何等業報，得如是威德自在耶？此是三種業報，云何為三？一者布施，二者調伏，三者修道。比丘當知，凡夫染習五欲，無有厭足，聖人智慧成滿，而常知足。比丘！一切諸行，過去盡滅、過去變易，彼自然眾具及以名稱，皆悉磨滅。是故，比丘！永息諸行，厭離、斷欲、解脫。</td>
+    <td class='ch' title='t99.2.68a27'>「比丘！此是何等業報，得如是威德自在耶？此是三種業報，云何為三？一者布施，二者調伏，三者修道。比丘當知，凡夫染習五欲，無有厭足，聖人智慧成滿，而常知足。比丘！一切諸行，過去盡滅、過去變易，彼自然眾具及以名稱，皆悉磨滅。是故，比丘！永息諸行，厭離、斷欲、解脫。</td>
     <td id='p17'>17. “Monk, these rewards are for what deeds that attain such awesome virtues and sovereignty? These are rewards for three kinds of deeds. What are the three? The first is generosity. The second is discipline. The third is cultivating the path. Monk, you should know, ordinary people are affected by the habits of the five desires and never tire of them. Noble people fulfill wisdom and are always satisfied. Monk, all those doings have completely ceased and changed in the past. The things they naturally provide and their fame all erode away. Therefore, monk, stop these doings forever, become disillusioned, end desire for them, and be liberated.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68b5'>「比丘！色為常？無常？」</td>
+    <td class='ch' title='t99.2.68b5'>「比丘！色為常？無常？」</td>
     <td id='p18'>18. “Monk, is form permanent or impermanent?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68b5'>比丘白佛言：「無常。世尊！」</td>
+    <td class='ch' title='t99.2.68b5'>比丘白佛言：「無常。世尊！」</td>
     <td>The monk said to the Buddha, “Impermanent, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68b5'>「若無常者，是苦耶？」</td>
+    <td class='ch' title='t99.2.68b5'>「若無常者，是苦耶？」</td>
     <td id='p19'>19. “If something is impermanent, is that painful?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68b6'>比丘白佛言：「是苦。世尊！」</td>
+    <td class='ch' title='t99.2.68b6'>比丘白佛[13]言：「是苦。世尊！」</td>
     <td>The monk said to the Buddha, “It’s painful, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68b6'>「比丘！若無常、苦，是變易法，聖弟子寧復於中計我、異我、相在不？」</td>
+    <td class='ch' title='t99.2.68b6'>「比丘！若無常、苦，是變易法，聖弟子寧復於中計我、異我、相在不？」</td>
     <td id='p20'>20. “Monk, if something is impermanent and painful, then it’s subject to change. Would a noble disciple consider it to be self, different than self, or that either is present in the other?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68b8'>比丘白佛：「不也，世尊！」</td>
+    <td class='ch' title='t99.2.68b8'>比丘白佛：「不也，世尊！」</td>
     <td>The monk said to the Buddha, “No, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68b9'>「如是受、想、行、識，為常、為無常。」</td>
+    <td class='ch' title='t99.2.68b9'>「如是受、想、行、識，為常、為無常。」</td>
     <td id='p21'>21. “In this way, is feeling … conception … volition … awareness permanent or impermanent?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68b9'>比丘白佛言：「無常。世尊！」</td>
+    <td class='ch' title='t99.2.68b9'>比丘白佛言：「無常。世尊！」</td>
     <td>The monk said to the Buddha, “Impermanent, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68b10'>「若無常者，是苦耶？」</td>
+    <td class='ch' title='t99.2.68b10'>「若無常者，是苦耶？」</td>
     <td id='p22'>22. “If something is impermanent, is that painful?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68b10'>比丘白佛言：「是苦。世尊！」</td>
+    <td class='ch' title='t99.2.68b10'>比丘白佛言：「是苦。世尊！」</td>
     <td>The monk said to the Buddha, “It’s painful, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68b11'>「比丘！若無常、苦，是變易法，聖弟子寧復於中計我、異我、相在不？」</td>
+    <td class='ch' title='t99.2.68b11'>「比丘！若無常、苦，是變易法，聖弟子寧復於中計我、異我、相在不？」</td>
     <td id='p23'>23. “Monk, if something is impermanent and painful, then it’s subject to change. Would a noble disciple consider it to be self, different than self, or that either is present in the other?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68b12'>比丘白佛：「不也，世尊！」</td>
+    <td class='ch' title='t99.2.68b12'>比丘白佛：「不也，世尊！」</td>
     <td>The monk said to the Buddha, “No, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68b13'>佛告比丘：「諸所有色，若過去、若未來、若現在，若內、若外，若麤、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。如是受、想、行、識，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。</td>
+    <td class='ch' title='t99.2.68b13'>佛告比丘：「諸所有色，若過去、若未來、若現在，若內、若外，若麤、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。如是受、想、行、識，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。</td>
     <td id='p24'>24. The Buddha told the monk, “Whatever forms there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not different than self, and neither is present in the other. Thus, whatever feelings … conceptions … volitions … instances of awareness there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not different than self, and neither is present in the other.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68b13'>「比丘！於色當生厭離、厭、離欲、解脫。如是於受、想、行、識，當生厭、離欲、解脫，解脫知見：『我生已盡，梵行已立，所作已作。』自知不受後有。」</td>
+    <td class='ch' title='t99.2.68b13'>「比丘！於色當生厭離、厭、離欲、解脫。如是於受、想、行、識，當生厭、離欲、解脫，解脫知見：『我生已盡，梵行已立，所作已作。』自知不受後有。」</td>
     <td id='p25'>25. “Monk, you should reject form and become disillusioned and free of desire for it, and be liberated. Thus, you should reject feeling … conception … volition … awareness and become disillusioned and free of desire for it, and be liberated. Being liberated, you will know and see: ‘My births have been ended, the religious practice has been established, and the task has been accomplished.’ You yourself will know you won’t be subject to a later existence.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68b21'>時，彼比丘聞佛所說，踊躍歡喜，作禮而去。常念土摶譬教授，獨一靜處，精勤思惟，不放逸住；不放逸住已：「所以善男子剃除鬚髮，正信非家，出家學道，為究竟無上梵行，見法自知身作證：『我生已盡，梵行已立，所作已作。』自知不受後有。」</td>
+    <td class='ch' title='t99.2.68b21'>時，彼比丘聞佛所說，踊躍歡喜，作禮而去。常念土摶譬教授，獨一靜處，精勤思惟，不放逸住；不放逸住已：「所以善男子剃除鬚髮，正信非家，出家學道，為究竟無上梵行，見法自知身作證：『我生已盡，梵行已立，所作已作。』自知不受後有。」</td>
     <td id='p26'>26. That monk celebrated and rejoiced after hearing what the Buddha taught. He then bowed and departed. Continuously mindful of that instruction based on the simile of the clod of dirt, he went alone to a quiet place, diligently contemplated it, and lived earnestly. Having lived earnestly, [he thought,] “A good son leaves home, cuts off his hair and beard, [puts on the Dharma robes,] believes at home in being homeless, and leaves home to train on the path. That’s the way he reaches the ultimate and unsurpassed religious practice. He’ll himself realize in the present life: ‘My births have been ended, the religious practice has been established, and the task has been accomplished.’ He himself will know he won’t be subject to a later existence.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.68b27'>時，彼尊者亦自知法，心得解脫，成阿羅漢。</td>
+    <td class='ch' title='t99.2.68b27'>時，彼尊者亦自知法，[14]心得解脫，成阿羅漢。</td>
     <td id='p27'>27. That venerable one also knew the Dharma himself. His mind was liberated, and he became an <em>arhat</em>.</td>
   </tr>
 </table>
@@ -156,31 +156,31 @@ next: SA1_48.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1"><p>This is <em>sūtra</em> no. 264 in the <cite>Taisho</cite> edition and no. 47 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0067c04" target="_blank">T99.2.67c4-8b28</a>). It’s parallel to <a href="https://suttacentral.net/sn22.96" target="_blank">SN 22.96</a> and <a href="https://suttacentral.net/ma61" target="_blank">MĀ 61</a>. The latter is interesting in that it represents a different version from another Savāstivāda canon, where it was placed in the <em>Madhyama Āgama</em>.</p>
+<li id="n1"><p>This is <em>sūtra</em> no. 264 in the <cite>Taisho</cite> edition and no. 47 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0067c04" target="_blank">T99.2.67c4-8b28</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0061a10" target="_blank">Y30.61a10-4a7</a>). It’s parallel to <a href="https://suttacentral.net/sn22.96" target="_blank">SN 22.96</a> and <a href="https://suttacentral.net/ma61" target="_blank">MĀ 61</a>. The latter is interesting in that it represents a different version from another Savāstivāda canon, where it was placed in the <em>Madhyama Āgama</em>.</p>
 <p>The main difference between the SN 22.96 and these parallels is that it lacks the passage in which the Buddha lists several different forms of rebirth in the heavens as a result of cultivating merit. It also lacks the conclusion that depicts the monk following the teaching and becoming an <em>arhat</em>. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>remains permanent, eternal, unchanging, and the same.</em> C. 常、恒、不變易、正住, P. <em>nicca dhuva sassata avipariṇāmadhamma sassatisama tatheva ṭhassati</em>. The meaning of 正住 is the main difficulty in this passage. Without looking at the P. parallel, it would seem to mean “correct abode,” reading 正 as modifying 住 and the pair forming another descriptor of the aggregates. However, when we consult the parallel passage in SN 22.96, we find that <em>ṭhassati</em> (“will remain”) corresponds to 住 as the verb of the sentence, and 正 corresponds to <em>sassatisama</em> (“always the same”). The confusion is caused by the translator retaining the Indic SOV grammar in C., which uses a SVO grammar.</p>
+<li id="n2"><p><em>remains permanent, eternal, unchanging, and the same.</em> C. <span class="ch">常、恒、不變易、正住</span>, P. <em>nicca dhuva sassata avipariṇāmadhamma sassatisama tatheva ṭhassati</em>. The meaning of <span class="ch">正住</span> is the main difficulty in this passage. Without looking at the P. parallel, it would seem to mean “correct abode,” reading <span class="ch">正</span> as modifying <span class="ch">住</span> and the pair forming another descriptor of the aggregates. However, when we consult the parallel passage in SN 22.96, we find that <em>ṭhassati</em> (“will remain”) corresponds to <span class="ch">住</span> as the verb of the sentence, and <span class="ch">正</span> corresponds to <em>sassatisama</em> (“always the same”). The confusion is caused by the translator retaining the Indic SOV grammar in C., which uses a SVO grammar.</p>
 <p>Beyond this, it would seem that two things have happened in these two texts. In the P. parallel, <em>sassati</em> has been added to <em>sama</em> to create a clearer meaning, which was a common practice in Buddhist texts. In the C. translation, G. <em>sama</em> (“same, equal”) has been confused for G. <em>saṃma</em> (“correct, proper”), which sometimes happened because <em>saṃma</em> was routinely abbrev. to <em>sama</em> in G.</p>
-<p>As a result of this, I’ve amended 正 to 等 but otherwise maintained the C. reading with the understanding that 住 is the main verb of the clause. [<a href="#ref2">back</a>]</p></li>
-<li id="n3"><p><em>small clod of dirt.</em> C. 小土摶, P. <em>paritta gomayapiṇḍa</em>. The expressions are the same in the other two parallels other than one has “earth” and the other “cowdung.” 摶 often translated the equiv. of P. <em>piṇḍa</em>, which occurs more commonly to describe a bite of food. In MĀ 61, the expression has been made even more dramatic: “scooped a little cowdung with his fingernail” (指爪抄少牛糞). [<a href="#ref3">back</a>]</p></li>
-<li id="n4"><p>This description of different kinds of rebirth are not found in SN 22.96. MĀ 61 omits this section describing noble wheel-turning king rebirths, but it does include the rebirths in heaven. Instead of a section on wheel-turning king rebirths, MĀ 61 has the Buddha being reborn “measureless times” as “warrior head-born kings” (S. <em>kṣatriya mūrdhajāta</em>). This was apparently a variation of the expression we find in P. and here in SĀ that lit. means “head-consecrated” king (<em>muddhāvasitta</em>, C. 灌頂王, S. <em>mūrdhābhiṣikta</em>). This “head consecration” seems to have referred to an ascension ritual that involved sprinkling water on the new king’s head.</p>
+<p>As a result of this, I’ve amended <span class="ch">正</span> to <span class="ch">等</span> but otherwise maintained the C. reading with the understanding that <span class="ch">住</span> is the main verb of the clause. [<a href="#ref2">back</a>]</p></li>
+<li id="n3"><p><em>small clod of dirt.</em> C. <span class="ch">小土摶</span>, P. <em>paritta gomayapiṇḍa</em>. The expressions are the same in the other two parallels other than one has “earth” and the other “cowdung.” <span class="ch">摶</span> often translated the equiv. of P. <em>piṇḍa</em>, which occurs more commonly to describe a bite of food. In MĀ 61, the expression has been made even more dramatic: “scooped a little cowdung with his fingernail” (<span class="ch">指爪抄少牛糞</span>). [<a href="#ref3">back</a>]</p></li>
+<li id="n4"><p>This description of different kinds of rebirth are not found in SN 22.96. MĀ 61 omits this section describing noble wheel-turning king rebirths, but it does include the rebirths in heaven. Instead of a section on wheel-turning king rebirths, MĀ 61 has the Buddha being reborn “measureless times” as “warrior head-born kings” (S. <em>kṣatriya mūrdhajāta</em>). This was apparently a variation of the expression we find in P. and here in SĀ that lit. means “head-consecrated” king (<em>muddhāvasitta</em>, C. <span class="ch">灌頂王</span>, S. <em>mūrdhābhiṣikta</em>). This “head consecration” seems to have referred to an ascension ritual that involved sprinkling water on the new king’s head.</p>
 <p>Here in SĀ, this passage about being reborn as noble wheel-turning kings is curious. Was the wheel-turning king considered the same as the anointed king that’s described below, or were they different types of kings? The confusion between the three parallels suggests that the wheel-turning king wasn’t mentioned here at all in the common ancestor text. [<a href="#ref4">back</a>]</p></li>
-<li id="n5"><p><em>Upavasatha.</em> C. 布薩 (EMC. po-sat), G. <em>posatha</em>, P. <em>uposatha</em>, S. <em>upavasatha</em>. The C. appears to translit. the G. equiv. of P. <em>uposatha</em> (dropping the final syllable as usu.). This was the name for Buddhist days of fasting and observing precepts. The elephant king is named the same in the P. parallel. The name found in MĀ 61 is unclear. [<a href="#ref5">back</a>]</p></li>
-<li id="n6"><p><em>Vālaha.</em> C. 婆羅 (EMC. bua-la), G. <em>vala</em>, P. <em>valāhaka</em>, S. <em>vālaha</em>?. The C. likely translit. G. <em>vala</em>, but it’s not clear what the intended meaning would be. The P. parallel has adopted the reading <em>valāhaka</em>, which means a storm cloud. The alt. C. parallel in MĀ 61 translates the name as 䭷 (“horse with a long mane”). However, a passage below makes it clearer that the reading is actually S. <em>vālaha</em> (C. 婆羅訶) like the P. parallel. This S. word refers to an animal’s tail and would agree more with MĀ 61’s translation. [<a href="#ref6">back</a>]</p></li>
-<li id="n7"><p><em>wool fabric.</em> C.欽婆羅 (EMC. k‘ɪəm-bua-la), G. ?, P. <em>kambala</em>, S. <em>kambala</em>. The C. appears to translit. a word equiv. to P./S. <em>kambala</em>, meaning fabric made of wool. [<a href="#ref7">back</a>]</p></li>
-<li id="n8"><p><em>Vaijayantaghoṣa.</em> C. 毗闍耶難提音聲 (EMC. bii-ʒɪă-yiă-nan-dei + “voice”), P. <em>vejayanta</em>, S. vaijayantaghoṣa. MĀ 61 translates this name as 樂聲 (“delightful voice”). 毗闍耶難提 appears to translit. an expression like S. <em>vaijayanta</em>, which is the name of Śakra’s palace and means “Triumph” or “Banner.” 音聲 likely translates <em>ghoṣa</em>, as indicated in the translit. that occurs below. There also appears to be a prefix 䟦求 that’s unclear. As a translit., it might represent Pr. <em>vagu</em> or <em>bagu</em>. It isn’t included in the translit. below, so I’ve set it aside as perhaps a corruption of the C. text. [<a href="#ref8">back</a>]</p></li>
-<li id="n9"><p><em>Kuśavatī</em>. C. 拘舍婆提 (EMC. kɪu-ʃɪă-bua-dei), G. <em>kuśavadi</em>, P. <em>kusāvatī</em>, S. <em>*kuśavatī</em>. The C. translit. matches the G. pronunciation best. [<a href="#ref9">back</a>]</p></li>
-<li id="n10"><p><em>Yoha</em>. C. 由訶 (EMC. yiəu-ha), P. <em>dhamma</em>. It’s unclear what this name means. The C. translit. is likely a Pr. pronunciation that may be equiv. to S. <em>yojana</em>, but this doesn’t seem very meaningful as a reading. I’ve reproduced the C. translit. in this case given that I’m not certain of its true S. equiv. [<a href="#ref10">back</a>]</p></li>
-<li id="n11"><p><em>antelope</em>. C. 迦陵伽 (EMC. kă-lɪəŋ-gɪă), G. <em>karaṅga</em>, P. <em>kadalimiga</em>, S. <em>kuraṅga</em>. The P. parallel reading is a kind of antelope deer hide. The C. translit. is well-known for <em>kaliṅga</em>, the name of a country in ancient India. However, it could also sound out a word like S. <em>kuraṅga</em>, which was the name of an Indian antelope. This makes better sense in the present context and in light of the P. parallel. [<a href="#ref11">back</a>]</p></li>
-<li id="n12"><p><em>silk cloth, linen cloth, </em>dukūla<em> cloth, and </em>kukova<em>? cloth</em>. C. 迦尸細衣 (EMC. kă-ʃɪi-sei)、芻摩衣 (EMC. ṭṣ‘ïu-mua)、頭鳩羅衣 (EMC. dəu-kɪəu-la)、拘沾(沽)婆衣 (EMC. kɪu-t‘em(ko)-bua), P. khomasukhumāni koseyyasukhumāni kambalasukhumāni kappāsikasukhumāni.</p>
+<li id="n5"><p><em>Upavasatha.</em> C. <span class="ch">布薩</span> (EMC. po-sat), G. <em>posatha</em>, P. <em>uposatha</em>, S. <em>upavasatha</em>. The C. appears to translit. the G. equiv. of P. <em>uposatha</em> (dropping the final syllable as usu.). This was the name for Buddhist days of fasting and observing precepts. The elephant king is named the same in the P. parallel. The name found in MĀ 61 is unclear. [<a href="#ref5">back</a>]</p></li>
+<li id="n6"><p><em>Vālaha.</em> C. <span class="ch">婆羅</span> (EMC. bua-la), G. <em>vala</em>, P. <em>valāhaka</em>, S. <em>vālaha</em>?. The C. likely translit. G. <em>vala</em>, but it’s not clear what the intended meaning would be. The P. parallel has adopted the reading <em>valāhaka</em>, which means a storm cloud. The alt. C. parallel in MĀ 61 translates the name as <span class="ch">䭷</span> (“horse with a long mane”). However, a passage below makes it clearer that the reading is actually S. <em>vālaha</em> (C. <span class="ch">婆羅訶</span>) like the P. parallel. This S. word refers to an animal’s tail and would agree more with MĀ 61’s translation. [<a href="#ref6">back</a>]</p></li>
+<li id="n7"><p><em>wool fabric.</em> C. <span class="ch">欽婆羅</span> (EMC. k‘ɪəm-bua-la), G. ?, P. <em>kambala</em>, S. <em>kambala</em>. The C. appears to translit. a word equiv. to P./S. <em>kambala</em>, meaning fabric made of wool. [<a href="#ref7">back</a>]</p></li>
+<li id="n8"><p><em>Vaijayantaghoṣa.</em> C. <span class="ch">毗闍耶難提音聲</span> (EMC. bii-ʒɪă-yiă-nan-dei + “voice”), P. <em>vejayanta</em>, S. <em>vaijayantaghoṣa</em>. MĀ 61 translates this name as <span class="ch">樂聲</span> (“delightful voice”). <span class="ch">毗闍耶難提</span> appears to translit. an expression like S. <em>vaijayanta</em>, which is the name of Śakra’s palace and means “Triumph” or “Banner.” <span class="ch">音聲</span> likely translates <em>ghoṣa</em>, as indicated in the translit. that occurs below. There also appears to be a prefix <span class="ch">䟦求</span> that’s unclear. As a translit., it might represent Pr. <em>vagu</em> or <em>bagu</em>. It isn’t included in the translit. below, so I’ve set it aside as perhaps a corruption of the C. text. [<a href="#ref8">back</a>]</p></li>
+<li id="n9"><p><em>Kuśavatī</em>. C. <span class="ch">拘舍婆提</span> (EMC. kɪu-ʃɪă-bua-dei), G. <em>kuśavadi</em>, P. <em>kusāvatī</em>, S. <em>*kuśavatī</em>. The C. translit. matches the G. pronunciation best. [<a href="#ref9">back</a>]</p></li>
+<li id="n10"><p><em>Yoha</em>. C. <span class="ch">由訶</span> (EMC. yiəu-ha), P. <em>dhamma</em>. It’s unclear what this name means. The C. translit. is likely a Pr. pronunciation that may be equiv. to S. <em>yojana</em>, but this doesn’t seem very meaningful as a reading. I’ve reproduced the C. translit. in this case given that I’m not certain of its true S. equiv. [<a href="#ref10">back</a>]</p></li>
+<li id="n11"><p><em>antelope</em>. C. <span class="ch">迦陵伽</span> (EMC. kă-lɪəŋ-gɪă), G. <em>karaṅga</em>, P. <em>kadalimiga</em>, S. <em>kuraṅga</em>. The P. parallel reading is a kind of antelope deer hide. The C. translit. is well-known for <em>kaliṅga</em>, the name of a country in ancient India. However, it could also sound out a word like S. <em>kuraṅga</em>, which was the name of an Indian antelope. This makes better sense in the present context and in light of the P. parallel. [<a href="#ref11">back</a>]</p></li>
+<li id="n12"><p><em>silk cloth, linen cloth, </em>dukūla<em> cloth, and </em>kukova<em>? cloth</em>. C. <span class="ch">迦尸細衣</span> (EMC. kă-ʃɪi-sei)<span class="ch">、芻摩衣</span> (EMC. ṭṣ‘ïu-mua)<span class="ch">、頭鳩羅衣</span> (EMC. dəu-kɪəu-la)<span class="ch">、拘沾(沽)婆衣</span> (EMC. kɪu-t‘em(ko)-bua), P. <em>khomasukhumāni koseyyasukhumāni kambalasukhumāni kappāsikasukhumāni</em>.</p>
 <p>The first C. translit. name doesn’t exactly match the well known S. <em>kauśeya</em> for a kind of silk, but I’ve guessed the C. might be corrupt or the original word some obscure Pr. pronunciation for the same.</p>
 <p>The second item most likely translit. G. <em>*kṣoma</em>, which is equiv. to P. <em>khoma</em> and S. <em>kṣauma</em>. This was a type of linen cloth.</p>
 <p>The third translit. is P/S. <em>dukūla</em>, which was another kind of fine linen made from bark fiber. It was apparently comparable to silk and often confused with true silk.</p>
-<p>The last item, which I’ve guessed was a translit. of something like Pr. <em>kukova</em>, is obscure to me. The <em>Taisho</em>’s 拘沾婆 might be a corruption of 拘沽婆 (or <em>vice versa</em>). 拘沽婆 has an entry in a Chinese glossary (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p1051b15" target="_blank">T2130.54.1051b15</a>), which claims that it was the name of a country. If so, it’s not a country I’ve been able to identify.</p>
-<p>MĀ 61 lists five types of cloth: linen (<em>kṣoma</em>), silk, silk (<em>dukūla</em>?), cotton, and antelope skin (~ S. <em>kuraṅga-pravara</em>?) (初摩衣、錦衣、繒衣、劫貝衣、加陵伽波惒邏衣). [<a href="#ref12">back</a>]</p></li>
+<p>The last item, which I’ve guessed was a translit. of something like Pr. <em>kukova</em>, is obscure to me. The <em>Taisho</em>’s <span class="ch">拘沾婆</span> might be a corruption of <span class="ch">拘沽婆</span> (or <em>vice versa</em>). <span class="ch">拘沽婆</span> has an entry in a Chinese glossary (cf. <a href="https://cbetaonline.dila.edu.tw/zh/T54n2130_p1051b15" target="_blank">T2130.54.1051b15</a>), which claims that it was the name of a country. If so, it’s not a country I’ve been able to identify.</p>
+<p>MĀ 61 lists five types of cloth: linen (<em>kṣoma</em>), silk brocade, fine silk (<em>dukūla</em>?), cotton, and antelope skin (~ S. <em>kuraṅga-pravara</em>?) (<span class="ch">初摩衣、錦衣、繒衣、劫貝衣、加陵伽波惒邏衣</span>) [<a href="#ref12">back</a>]</p></li>
 </ol>
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 9 March 2024</p>
+<p class='revised'>Last Revised: 2 January 2026</p>
 
 <hr/>
