--- a/01_agama/samyukta/01/SA1_51.md
+++ b/01_agama/samyukta/01/SA1_51.md
@@ -14,23 +14,23 @@ next: SA1_52.html
   <th class='ch'>（二六八） 河流</th>
   <th class='en'>51 (268). The River Torrent</th>
   <tr>
-    <td class="ch" title='t125.2.70a12'>如是我聞：一時，佛在舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.70a12'>如是我聞： 一時，佛在舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.70a13'>爾時，世尊告諸比丘：「譬如河水從山㵎出，彼水深駛，其流激注，多所漂沒。其河兩岸，生雜草木，大水所偃，順靡水邊，眾人涉渡，多為水所漂，隨流沒溺，遇浪近岸，手援草木，草木復斷，還隨水漂。</td>
+    <td class='ch' title='t99.2.70a13'>爾時，世尊告諸比丘：「譬如河水從山㵎出，彼水深駛，其流激注，多所漂沒。其河兩岸，生雜草木，大水所偃，順靡水邊，眾人涉渡，多為水所漂，隨流沒溺，遇浪近岸，手援草木，草木復斷，還隨水漂。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Take the example of a river produced by a mountain torrent. Its water is deep and fast moving. The current flows violently, and many things bob up and down in it. Both shores of that river have a mixture of reeds and trees growing on them. They form a bridge that leans across that large river from its shores. When a group of people attempt to ford the river there, many are carried away by the water, following the current until they disappear. When a wave pushes them near the shore, they grab at the reeds and trees, but the reeds and trees break, and they continue floating down the river.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.70a17'>「如是，比丘！若凡愚眾生不如實知色、色集、色滅、色味、色患、色離，不如實知故，樂著於色，言色是我，彼色隨斷。如是不如實知受、想、行、識、識集、識滅、識味、識患、識離，不如實知故，樂著於識，言識是我，識復隨斷。</td>
+    <td class='ch' title='t99.2.70a17'>「如是，比丘，若凡愚眾生不如實知色、色集、色滅、色味、色患、色離，不如實知故，樂著於色，言： 『色是我。』 彼色隨斷。 如是不如實知受、想、行、識、識集、識滅、識味、識患、識離。 不如實知故，樂著於識。 言： 『識是我。』 識復隨斷。</td>
     <td id='p3'>3. “In this way, monks, if ordinary, foolish sentient beings don’t truly know form … the formation of form … cessation of form … enjoyment of form … trouble of form … don’t truly know the escape from form, they will delight in form, saying: ‘Form is myself.’ That form subsequently breaks. In the same way, they don’t truly know feeling … conception … volition … awareness … the formation of awareness … cessation of awareness, enjoyment of awareness, trouble of awareness … don’t truly know the escape from awareness. Because they don’t truly know it, they delight in awareness. They say, ‘Awareness is myself.’ That awareness will also subsequently break.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.70a22'>「若多聞聖弟子如實知色、色集、色滅、色味、色患、色離，如實知故，不樂著於色。如實知受、想、行、識、識集、識滅、識味、識患、識離，如實知故，不樂著識，不樂著故。如是自知，得般涅槃：『我生已盡，梵行已立，所作已作，自知不受後有。』」</td>
-    <td id='p4'>4. “If a well-versed noble disciple truly knows form … the formation of form … cessation of form … enjoyment of form … trouble of form … truly knows the escape from form, then they won’t delight in form. Truly knowing feeling … conception … volition … awareness … the formation of awareness … cessation of awareness … enjoyment of awareness … trouble of awareness … truly knowing the escape from awareness, they don’t delight in awareness. Because they don’t delight in it, they will themselves know the attainment of <em>parinirvāṇa</em>: ‘My births have been ended, the religious life has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”</td>
+    <td class='ch' title='t99.2.70a22'>「若多聞聖弟子如實知色、色集、色滅、色味、色患、色離，如實知故，不樂著於色。如實知受、想、行、識、識集、識滅、識味、識患、識離，如實知故，不樂著識，不樂著故。如是自知，得般涅槃：『我生已盡，梵行已立，所作已作。』自知不受後有。」</td>
+    <td id='p4'>4. “If a well-versed noble disciple truly knows form … the formation of form … cessation of form … enjoyment of form … trouble of form … truly knows the escape from form, then they won’t delight in form. Truly knowing feeling … conception … volition … awareness … the formation of awareness … cessation of awareness … enjoyment of awareness … trouble of awareness … truly knowing the escape from awareness, they don’t delight in awareness. Because they don’t delight in it, they will themselves know the attainment of <em>parinirvāṇa</em>: ‘My births have been ended, the religious practice has been established, and the task has been accomplished.’ They themselves will know they won’t be subject to a later existence.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.70a28'>佛說此經已，時諸比丘聞佛所說，歡喜奉行。</td>
+    <td class='ch' title='t99.2.70a28'>佛說此經已，時諸比丘聞佛所說，歡喜奉行。</td>
     <td id='p5'>5. After the Buddha taught this <em>sūtra</em>, the monks who heard what he taught rejoiced and approved.</td>
   </tr>
 </table>
@@ -40,11 +40,11 @@ next: SA1_52.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 268 in the <cite>Taisho</cite> edition and no. 51 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0070a12" target="_blank">T99.2.70a12-29</a>). The parallel for this <em>sūtra</em> is <a href="https://suttacentral.net/sn22.93" target="_blank">SN 22.93</a>. Both versions feature a parable in which people who are washed away by a swift current fail to rescue themselves because they try to grab things along the shore that aren’t reliable and break. This is likened to the impermanence of the aggregates, which inevitable break up at the end of a person’s life. The main difference between the two versions is that the C. version analyzes the aggregates in terms of their formation, cessation enjoyment, trouble, and escape, while the P. version focuses on mistaking them as self. [<a href="#ref1">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 268 in the <cite>Taisho</cite> edition and no. 51 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0070a12" target="_blank">T99.2.70a12-29</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0073a07" target="_blank">Y30.73a07-16</a>). The parallel for this <em>sūtra</em> is <a href="https://suttacentral.net/sn22.93" target="_blank">SN 22.93</a>. Both versions feature a parable in which people who are washed away by a swift current fail to rescue themselves because they try to grab things along the shore that aren’t reliable and break. This is likened to the impermanence of the aggregates, which inevitable break up at the end of a person’s life. The main difference between the two versions is that the C. version analyzes the aggregates in terms of their formation, cessation enjoyment, trouble, and escape, while the P. version focuses on mistaking them as self. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 4 April 2024</p>
+<p class='revised'>Last Revised: 10 February 2024</p>
 
 <hr/>
