--- a/01_agama/samyukta/01/SA1_52.md
+++ b/01_agama/samyukta/01/SA1_52.md
@@ -14,71 +14,71 @@ next: SA1_53.html
   <th class='ch'>（二六九） 祇林</th>
   <th class='en'>52 (269). Jeta’s Grove</th>
   <tr>
-    <td class="ch" title='t125.2.70b1'>如是我聞：一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td class='ch' title='t99.2.70b1'>如是我聞：一時，佛住舍衛國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.70b2'>爾時，世尊告諸比丘：「非汝所應法，當盡捨離，捨彼法已，長夜安樂。比丘！何等法非汝所應，當速捨離，如是色、受、想、行、識，非汝所應，當盡捨離，斷彼法已，長夜安樂。</td>
+    <td class='ch' title='t99.2.70b2'>爾時，世尊告諸比丘：「非汝所應法，當盡捨離，捨彼法已，長夜安樂。比丘！何等法非汝所應，當速捨離，如是色、受、想、行、識，非汝所應，當盡捨離，斷彼法已，長夜安樂。</td>
     <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Something that doesn’t belong to you ought to be completely abandoned. Once that has been abandoned, you’ll be happy for a long night. Monks, what are the things that don’t belong to you that ought to be quickly abandoned? In this way, form … feeling … conception … volition … awareness doesn’t belong to you and ought to be completely abandoned. Once that has stopped, you’ll be happy for a long night.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.70b8'>「譬如祇桓林中樹木，有人斫伐枝條，擔持而去，汝等亦不憂慼。所以者何？以彼樹木非我、非我所。如是，比丘！非汝所應者，當盡捨離，捨離已，長夜安樂。何等非汝所應，色非汝所應，當盡捨離，捨離已，長夜安樂。如是受、想、行、識，非汝所應，當速捨離，捨彼法已，長夜安樂。</td>
+    <td class='ch' title='t99.2.70b8'>「譬如祇桓林中樹木，有人斫伐枝條，擔持而去，汝等亦不憂慼。所以者何？以彼樹木非我、非我所。如是，比丘！非汝所應者，當盡捨離，捨離已，長夜安樂。何等非汝所應，色非汝所應，當盡捨離，捨離已，長夜安樂。如是受、想、行、識，非汝所應，當速捨離，捨彼法已，長夜安樂。</td>
     <td id='p3'>3. “They’re like the trees here in Jeta’s Grove. Should someone chop off their branches, gather them up, and take them away, you wouldn’t grieve over it. Why is that? Because those trees aren’t oneself, nor do they belong to oneself. Thus, monks, whatever doesn’t belong to you ought to be completely abandoned. Once that has been abandoned, you’ll be happy for a long night. What is it that doesn’t belong to you? Form doesn’t belong to you and ought to be completely abandoned. Once that has been abandoned, you’ll be happy for a long night. In this way, feeling … conception … volition … awareness doesn’t belong to you and ought to be quickly abandoned. Once that has been abandoned, you’ll be happy for a long night.</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.70b8'>「諸比丘！色為常耶？為無常耶？」</td>
+    <td class='ch' title='t99.2.70b8'>「諸比丘！色為常耶？為無常耶？」</td>
     <td id='p4'>4. “Monks, is form permanent or impermanent?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.70b13'>諸比丘白佛言：「無常。世尊！」</td>
+    <td class='ch' title='t99.2.70b13'>諸比丘白佛言：「無常。世尊！」</td>
     <td>The monks said to the Buddha, “Impermanent, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.70b13'>「比丘！無常者，為是苦耶？」</td>
+    <td class='ch' title='t99.2.70b13'>「比丘！無常者，為是苦耶？」</td>
     <td id='p5'>5. “Monks, when something is impermanent, is that painful?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.70b14'>答言：「是苦。世尊！」</td>
+    <td class='ch' title='t99.2.70b14'>答言：「是苦。世尊！」</td>
     <td>They answered, “It’s painful, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.70b14'>佛告比丘：「若無常、苦，是變易法，多聞聖弟子寧於中見有我、異我、相在不？」</td>
+    <td class='ch' title='t99.2.70b14'>佛告比丘：「若無常、苦，是變易法，多聞聖弟子寧於中見有我、異我、相在不？」</td>
     <td id='p6'>6. The Buddha told the monks, “If something is impermanent and painful, it’s subject to change. Would a well-versed noble disciple see in that something that’s self, different than self, or that either is present in the other?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.70b16'>答言：「不也，世尊！」</td>
+    <td class='ch' title='t99.2.70b16'>答言：「不也，世尊！」</td>
     <td>They answered, “No, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.70b16'>「如是受、想、行、識為是常耶？無常耶？」</td>
+    <td class='ch' title='t99.2.70b16'>「如是受、想、行、識為是常耶？無常耶？」</td>
     <td id='p7'>7. “In this way, is feeling … conception … volition … awareness permanent or impermanent?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.70b17'>答言：「無常。世尊！」</td>
+    <td class='ch' title='t99.2.70b17'>答言：「無常。世尊！」</td>
     <td>They answered, “Impermanent, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.70b17'>「比丘！若無常者，是苦耶？」</td>
+    <td class='ch' title='t99.2.70b17'>「比丘！若無常者，是苦耶？」</td>
     <td id='p8'>8. “Monks, if something is impermanent, is that painful?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.70b18'>答言：「是苦。世尊！」</td>
+    <td class='ch' title='t99.2.70b18'>答言：「是苦。世尊！」</td>
     <td>They answered, “It’s painful, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.70b18'>佛告比丘：「若無常、苦，是變易法，多聞聖弟子寧於中見有我、異我、相在不？」</td>
+    <td class='ch' title='t99.2.70b18'>佛告比丘：「若無常、苦，是變易法，多聞聖弟子寧於中見有我、異我、相在不？」</td>
     <td id='p9'>9. The Buddha told the monks, “If something is impermanent and painful, it’s subject to change. Would a well-versed noble disciple see in that something that’s self, different than self, or that either is present in the other?”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.70b20'>答言：「不也，世尊！」</td>
+    <td class='ch' title='t99.2.70b20'>答言：「不也，世尊！」</td>
     <td>They answered, “No, Bhagavān.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.70b20'>「比丘！是故諸所有色，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。如是受、想、行、識，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。聖弟子觀此五受陰非我、我所。如是觀時，於諸世間無所取著；無所取著者，自得涅槃：『我生已盡，梵行已立，所作已作，自知不受後有。』」</td>
-    <td id='p10'>10. “Therefore, monks, whatever forms there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not different than self, and neither is present in the other. In this way, whatever feelings … conceptions … volitions … instances of awareness there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not different than self, and neither is present in the other. A noble disciple observes these five acquired aggregates as not self or belonging to self. When they observe them in this way, they will have no attachments to anything in any world. Having no attachments, they will attain their own <em>nirvāṇa</em>: ‘My births have been ended, the religious life has been established, and the task has been accomplished. I myself know that I wont be subject to a later existence.’”</td>
+    <td class='ch' title='t99.2.70b20'>「比丘！是故諸所有色，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。如是受、想、行、識，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。聖弟子觀此五受陰非[5]我、我所。如是觀時，於諸世間無所取著；無所取著者，自得涅槃：『我生已盡，梵行已立，所作已作。』自知不受後有。」</td>
+    <td id='p10'>10. “Therefore, monks, whatever forms there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not different than self, and neither is present in the other. In this way, whatever feelings … conceptions … volitions … instances of awareness there are, whether they are past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not different than self, and neither is present in the other. A noble disciple observes these five acquired aggregates as not self or belonging to self. When they observe them in this way, they will have no attachments to anything in any world. Having no attachments, they will attain their own <em>nirvāṇa</em>: ‘My births have been ended, the religious practice has been established, and the task has been accomplished.’ They themselves will know that I won’t be subject to a later existence.”</td>
   </tr>
   <tr>
-    <td class="ch" title='t125.2.70b29'>佛說此經已，時諸比丘聞佛所說，歡喜奉行。</td>
+    <td class='ch' title='t99.2.70b29'>佛說此經已，時諸比丘聞佛所說，歡喜奉行。</td>
     <td id='p11'>11. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
   </tr>
 </table>
@@ -88,11 +88,11 @@ next: SA1_53.html
 <h3 id="notes">Notes</h3>
 
 <ol class="notes-list">
-<li id="n1">This is <em>sūtra</em> no. 269 in the <cite>Taisho</cite> edition and no. 52 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0070b01" target="_blank">T99.2.70b1-c1</a>). It’s parallel with <a href="https://suttacentral.net/sn22.33" target="_blank">SN 22.33-34</a>. It shares the same metaphor as found in SN 22.33 that likens the five aggregates to kindling wood that a person collects in Jeta’s Grove. In the P. version, the absurdity of considering kindling to be part of oneself is brought out more clearly. [<a href="#ref1">back</a>]</li>
+<li id="n1"><p>This is <em>sūtra</em> no. 269 in the <cite>Taisho</cite> edition and no. 52 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0070b01" target="_blank">T99.2.70b1-c1</a>, <a href="https://cbetaonline.dila.edu.tw/zh/Y30n0030_p0075a01" target="_blank">Y30.75a1-6a2</a>). It’s parallel with <a href="https://suttacentral.net/sn22.33" target="_blank">SN 22.33</a>-<a href="https://suttacentral.net/sn22.34" target="_blank">34</a>. It shares the same metaphor as found in SN 22.33 that likens the five aggregates to kindling wood that a person collects in Jeta’s Grove. In the P. version, the absurdity of considering kindling to be part of oneself is brought out more clearly. [<a href="#ref1">back</a>]</p></li>
 </ol>
 <hr/>
 
 <p class="translator">Translator: Charles Patton</p>
-<p class='revised'>Last Revised: 4 April 2024</p>
+<p class='revised'>Last Revised: 10 February 2024</p>
 
 <hr/>
